--- a/gnews/12.md
+++ b/gnews/12.md
@@ -1,29 +1,21 @@
 ---
-title: 基辅和台湾发生的事情最终会使美国被迫加入并消灭邪恶
+title: 不管冬奥会成功还是失败最大的可能性是习近平会打台湾
 ---
-`喜马拉雅日本银河系农场` [轉載自GNews](https://gnews.org/zh-hans/1937076/)
+`喜马拉雅日本银河系农场` [轉載自GNews](https://gnews.org/zh-hans/1937097/)
 
-G-TV视频链接：[https://gtv.org/video/id=61f77cd7d90bdd2085a2ffc3](https://gtv.org/video/id=61f77cd7d90bdd2085a2ffc3)
+G-TV视频链接：[https://gtv.org/video/id=61f77d62d90bdd2085a3000a](https://gtv.org/video/id=61f77d62d90bdd2085a3000a)
 
-**郭文贵先生：**我觉得普京在乌克兰的很多人都在说，这咱们说的最早的啊，我们是全世界最早的是说乌克兰，习要配合和台湾，这叫“双鹰头运动”，是吧？你取东我取西，然后在冬奥会前后。这是上次中国这个夏季奥运会的时候它不就干了克罗地亚（疑似克里米亚）嘛，是吧？这是普金的一贯的手法啊。
+**Eglise: **我就是关心，我关心可能更多的还是台湾。如果这次冬奥会按照这个习近平的标准它是胜利结束了，他是不是能够放下想攻打台湾的意向？如果这个冬奥会是个失败的，他可能会？七哥您是这个意思吧？
 
-那么现在比较好在哪里了呢？我觉得这次普金玩的不是跟西方讲数，也不是跟欧洲讲数，我觉得普京真的是在跟习唱一场相互的，这么演一场“二人转”的戏。这个戏他绝对不是想真打的，但是很有可能演着演着就成真了。
+**郭文贵先生：**我觉得成功与失败他都会打台湾，我基本上我觉得。他没有失败的，他一定不管什么，失败他也说成赢了。就像路大脑袋，像欺民贼一样，永远他们赢了。郭宝胜在法庭出来，你还记得郭宝胜出来，对着夏业良（说）：我们赢了。还有那个什么，叫叶什么的给了当律师的是吧？他说：我替你省了一百万。这就是他们的心理状态嘛是吧？他一定说我赢，不管什么情况都说我赢。
 
-我也不觉得，我现在我不觉得，就是说习去攻台湾，美国就像咱们头两天儿我们“甜蜜蜜运动” 美国的咱们合作者问我：“你觉得习要打这个台湾，你觉得美国人是应该加入、迅速加入呢还是马上，还是看看再加入呢？还是只是说在某种方面，还是派观察员呢？也就是说当雇佣军嘛，到前边儿去支持呢？”
-
-我说，这事儿还真不是你能说了算的，这完全取决于当时它要进台湾的方式和惨状，还有它进去以后想干的什么事情，最后你美国没有选择。你现在说都太早。就包括乌克兰，普京会在直接从边境上虚晃一枪，直接插入基辅的后面儿去。直取基辅，它一定会玩儿这招的。
-
-因为西方人没有，任何人都不相信，说不可能攻击基辅，他不可能攻击基辅，他可以攻击基辅旁边的小镇堪城（音），他不会攻击基辅。你们没有去过乌克兰，它旁边有个小镇叫“美女模特之镇”，就那个地方。他可能到那儿去。我说：“不是的，他可能直接干到基辅去，他就是要让整个乌克兰跪下。”
-
-到那个时候也不你西方美国决定的能不能进。就是美国认为，美国会代理人战争，会让这些人上。美国不会直接参与战争，我觉得也不是美国决定。这就是为什么我觉得在未来六周以内，在基辅和在台湾发生的事情，是不可控，不可设计，而恰恰也就是“甜蜜蜜运动”我们想达到的效果。
-
-而且最后，美国被迫加入，被迫加入。为什么呀？美国内部一堆的，跟乌克兰千丝万缕的关系，也有跟俄罗斯这种千丝万缕的关系，和共产党千丝万缕关系的，这种不可控的因素，最终会成就这次邪恶的势力这次会被消灭。而且是，不是以美国人的意志为转移的，是根据情况往下发展的，我就不再细说，这就是未来六周的好戏吧。
+但是我觉得不管什么结果他都会打台湾。这是，现在他必须打的，只有很少的可能不打台湾，所以说咱们看着吧。
 
 字幕来源：[2022年1月24日郭文贵先生直播全文字版](https://gnews.org/zh-hans/1909538/)
 
 编辑整理：Jacques；
 
-字幕文件制作：知津；
+字幕文件制作：大好河山；
 
 视频制作及上传：Cindy；
 
