--- a/gnews/58.md
+++ b/gnews/58.md
@@ -1,153 +1,42 @@
 ---
-title: 我们的加息系统是负利率设置的，人们不了解我们的金融体系将发生的创伤将影响您的个人生活
+title: 因提供对维吾尔人的监控 北京奥运会“人工智能冠军”翻译供应商被制裁
 ---
-`洛杉矶盘古农场 HIMALAYA LA PANGU` [轉載自GNews](https://gnews.org/zh-hans/1878442/)
+`喜马拉雅农场新西兰站` [轉載自GNews](https://gnews.org/zh-hans/1927328/)
 
-[https://gtv.org/video/id=61e6a22e87664c47acd645e2](https://gtv.org/video/id=61e6a22e87664c47acd645e2)
+作者：Jerry Dunleavy
+发布日期：2022年1月28日
+新闻来源：华盛顿检查官（Washington Examiner )
+翻译：V 在途中
 
-**Steve Bannon:
-史蒂夫班农:**
+![](https://assets.gnews.org/wp-content/uploads/2022/01/iFLYTEK-Asia-AI-Leader-Debuts-Cutting-Edge-Voice-Technologies-in-the-US-696x392-1.jpg)
 
-I just want to make sure we go through it one more time
-我只是想再一次明确实一下
+北京奥运会官方翻译服务提供商因帮助中共监视维吾尔穆斯林而被美国列入黑名单。
+这家名为 iFlytek 的语音识别公司长期协助中国安全部门在新疆和其他地方提供技术监控，2019年9月被指定为“北京2022年官方自动翻译软件独家供应商” 。美国称中共正在对维吾尔人进行种族灭绝，美国商务部在 2019 年 10 月表示，科大讯飞是被列入美国黑名单的 20 多个中国实体公司之一，称科大讯飞“在实施中共国的镇压、大规模任意拘留和针对维吾尔人、哈萨克人和其他穆斯林少数群体成员提供了技术监控。”
 
-The numbers a day you’ve had CPI now PPI
-你每天的数字是消费者物价指数，现在是生产者物价指数
+科大讯飞的创始人兼首席执行官刘庆峰也是中共的橡皮图章全国立法机关全国人大代表。2021年，科大讯飞为东京奥运会提供了翻译服务，在9月份的新闻稿中暗示了其在北京冬奥会的计划。该公司长期以来得到中共国家的支持和政府的认可。公司于2018年被科技部评为全国“人工智能冠军”。
 
-Come by and tell people this is…
-过来告诉人们这是…
+一家中国媒体在 2014 年报道称，科大讯飞“表示使用大数据技术打击恐怖主义已成为国际趋势”，讯飞公司可以提供帮助。科大讯飞智慧城市事业群公安部营销总监傅立亭告诉中共运营的《中国日报》，“我们通过应用我们的人工智能与警方合作。” 他告诉媒体，该公司自 2015 年以来一直在中国安徽和上海等城市与警方合作，“我们已经开始将应用程序扩展到 10 多个省的公安部门。” 傅指出科大讯飞的人工智能机器人“警察助手”，并表示该公司希望其设备在200个城市被警察使用。
 
-I’m stunned in my lifetime，given what we’ve seen before that we ever get these things
-鉴于我们之前所见，我们曾经得到过这些东西，我有生以来都惊呆了
+人权观察在 2017 年表示，科大讯飞表示已帮助中国公安部建立了国家语音模式数据库，并成立了人工智能语音技术部级实验室，以在新疆和西藏“破案”。监管机构表示，该公司“也是新疆和安徽公安局采购的声纹采集系统的指定供应商”。
 
-And this is dangerous
-这是很危险的
+该翻译提供商与中国移动、中国电信和中国联通合作多年，而这些电讯公司都已被美国列入黑名单，中国联通北京也是奥运会的独家供应商。
 
-No. 1 our system for these rate increases is talk trying to choke this down
-now our system is set up for negative interest rates
-第一，我们的这些加息系统是试图扼杀这种情况，现在我们的系统设置为负利率
+美国国家人工智能安全委员会在 2021 年表示，科大讯飞等“国家冠军”公司帮助“引领国内人工智能技术的发展”，并“推进国家主导的优先事项，为军事和安全计划提供支持”，有大量证据表明科大讯飞帮助参与中国当局的追捕行动。
 
-People don’t understand that the trauma that is going to happen in our financial system
-人们不明白我们金融体系将要发生的创伤
+据报道，科大讯飞的创始人兼首席执行官刘庆峰也是中共的橡皮图章全国立法机关全国人大代表。刘晓波回应美国黑名单时说：“没有任何力量可以阻挡我们用人工智能建设美丽世界的信心和步伐！” 他还发誓“我们不会被勒死”。
 
-That’s going to roll into your personal life, okay?
-将会影响每个人生活，知道吗？
+讯飞其业务在 2020 年增长了 66%。在 2020 年对中国国营《环球时报》表示，黑名单并没有放慢速度，并吹捧他与华为的合作伙伴关系。
 
-No. 2 run-away inflation has many bad things that happens when that happens Steve Cortes
-第二，通货膨胀失控时有很多不好的事情发生，交给史蒂夫科尔特斯
+华为分享的 2018 年杂志文章 断言，“科大讯飞和华为已形成战略合作伙伴关系，以开发语音和人工智能技术的实际应用。”
 
-Steve Cortes:
-史蒂夫科尔特斯:
-You’re exactly right Steve
-你是非常对的，史蒂夫
+《华盛顿邮报》去年 12 月 透露，作为协助中国当局为“国家安全”目的分析声音的宣传的一部分，华为制作了幻灯片显示“科大讯飞声纹管理平台”（由华为和科大讯飞共同开发）可以识别个人通过庞大的“声纹”数据库。
 
-Look, if we look at history we see that a lot of political upheaval
-看，如果我们回顾历史，我们会看到很多政治动荡
+美国国会中国执行委员会在 2019 年表示，“中国安全当局继续与包括科大讯飞在内的国内公司合作，以扩大政府监控系统的覆盖范围和分析能力”。该公司参加奥运会是美国和国际运动员可能被迫使用与中共镇压有关的技术和产品的又一个例子，科大讯飞也可能被用来监视奥运会参与者和与会者。
 
-upheaval that we could say the least evil actually results from inflation
-我们可以说最小的邪恶动荡实际上是由通货膨胀造成的
+[新闻链接](https://www.washingtonexaminer.com/policy/foreign/beijing-olympics-translation-provider-is-ccp-ai-champion-sanctioned-for-uyghur-surveillance)
 
-If we look at country that were formally extremely successful places like Venezuela and Argentina in our own hemisphere
-如果我们看看在我们自己的半球有像委内瑞拉和阿根廷这样在形式上非常成功的国家
-
-If we look at Germany pre-World War II
-如果我们看看二战前的德国
-
-We can see that inflation leads ultimately to abord authoritarianism and totalitarianism
-我们可以看到通货膨胀最终导致社会走向威权主义和极权主义
-
-And in a country that is already as polarized as the United States is
-而在一个已经像美国这样两极分化的国家
-
-This kind of inflation is not just bad economics
-这种通货膨胀不仅仅是糟糕的经济学
-
-It’s actually societally dangerous for our country
-它实际上是对我们国家的社会危险
-
-And that’s why we need to be cleared-eyed about what it is and about policy solution
-而这就是为什么我们需要清楚它是什么，以及政策解决方案是什么
-
-Because Steve, we can’t just curse the darkness
-因为，史蒂夫，我们不能只是诅咒黑暗
-
-We have to do that, yes
-是的，我们必须这样做
-
-But as lamentable as this current economic quagmire is
-但与当前的经济泥潭一样可悲的是
-
-This is stagflationary embroil that we face right now in America
-我们美国现在面临的滞胀困境
-
-It does also, Steve, present political opportunity
-史蒂夫，它也确实提供了政治机会
-
-Political opportunity to solidify the America first cost as the lasting secular ship in favor of working class Americans
-巩固美国作为有利于美国工人阶级的持久世俗之船的首要成本的政治机会
-
-and to transform the republican party, not of the parties of the chased right
-并改变共和党，而不是被追逐的权利的政党
-
-But instead, into a party of working class Americans that is truly multi-ethnic and multi-racial
-反而成为一个真正多民族和多种族的美国工人阶级政党
-
-And the polling is starting to show us that political opening is there
-民意调查开始向我们表明政治开放是存在的
-
-If we have the guts and the gumption to cease it of course the right policies mix as well
-如果我们有勇气和进取心去停止它，当然正确的政策也会混合在一起
-
-For example, as I mentioned yesterday in the show
-例如，正如我昨天在节目中提到的
-
-I think the most powerful way right now to win both politically as well as get the economy back on track
-我认为目前最有力的方式是去赢得政治上以及让经济重回正轨
-
-get the inflation in control again
-再次控制通胀
-
-and get wages rising is inflation motive
-并提高工资就是通胀动机
-
-We need to absolutely stop illegal migration in this country
-在这个国家，我们需要绝对阻止非法移民
-
-and I believe we need a pause in even legal migration to this country
-并且我相信，就算是合法移民也需要适当暂停
-
-A pause in H-1B and other similar would work which is why let the American people wages starts to rise
-H-1B和其他类似的暂停会起作用，这样可以让美国人的工资开始上涨
-
-So that we see real wages take off again the way they did under Donald Trump
-这样我们就可以看到实际工资再次像唐纳德-川普领导下那样飞腾
-
-instead of the way they are crashing right now under Joe Biden
-而不是现在在乔-拜登领导下崩溃的方式
-
-So, it’s calamity but there’s always opportunity as well in calamity
-因此，这是灾难，但灾难中也总是有机会的
-
-* * *
-
-Date: 01/13/2022
-原视频标题: 我们的加息系统是负利率设置的 人们不了解我们的金融体系将发生的创伤 将影响您的个人生活
-Our system is set up for negative interest rates. People don’t understand the trauma that’s going to happen in our financial system that’s going to roll into your personal life.
-原视频日期：2022/01/13
-原视频链接: [https://gettr.com/post/po5vfe12f0](https://gettr.com/post/po5vfe12f0)
-任务编号：KE353（3494）
-视频时间段 : 0:00-02:52
-
-英听校：洛杉矶盘古农场 – 郭班之樱
-翻译： 洛杉矶盘古农场 – 郭班之樱
-翻译终校：洛杉矶盘古农场 – Mike Li
-字幕+视频制作：洛杉矶盘古农场 – 天涯行
-审片：洛杉矶盘古农场 – 银龙
-发布：洛杉矶盘古农场 – Kevin37L
-[![](https://assets.gnews.org/wp-content/uploads/2021/03/WhatsApp-Image-2021-06-26-at-22.05.30.jpeg)](https://discord.gg/2vuvRm7z6U)
-洛杉矶盘古农场欢迎您加入:(或点击上方图片）
-
-[https://discord.gg/2vuvRm7z6U](https://discord.gg/2vuvRm7z6U)
+审核校对：Barry Jack
+上传排版：V在途中
 
  
 
