--- a/gnews/10.md
+++ b/gnews/10.md
@@ -1,20 +1,49 @@
 ---
-title: 美副国务卿薛曼：北京冬奥可能影响俄罗斯侵乌时机
+title: 处男之身却以强奸碎尸罪名处决的六四英雄何以无惧生死
 ---
-`GTV新聞訪談` [轉載自GNews](https://gnews.org/zh-hans/1937087/)
+`喜马拉雅日本银河系农场` [轉載自GNews](https://gnews.org/zh-hans/1937113/)
 
-[撰稿日期]：2022.1.27
+G-TV视频链接：[https://gtv.org/video/id=61f77de2d90bdd2085a3003a](https://gtv.org/video/id=61f77de2d90bdd2085a3003a)
 
-[署名]：台湾宝岛农场dobi
+**郭文贵先生：**我觉得真的要把这种英雄化为动力是最好的。我们中国人真的不缺情感也不缺眼泪，也不缺下跪。我觉得世界上跪的最多的就是我们中国人，眼泪流最多的也是中国人，血流最多的也是中国人，然后我们情感也是最丰富的。
 
-[新闻连接]： 《https://udn.com/news/story/122663/6065695?from=udn-catelistnews\_ch2》
+就像我们这几天在“甜蜜蜜运动”中，很多次外国人流泪，我一次泪都没流过。我真的所有的泪都留给你们前边儿的，几乎是啊。对待这样的英雄呢我们最重要的就是行动。
 
+就这位英雄的骨气啊，就一说他，你们没有感受，我是后脑勺子、浑身就起鸡皮疙瘩，汗毛真的独立的感觉啊。就他那个人那个样，就是个很普通的中国男孩，你就——打到他身上，就像你往地上扔东西一样。这个医生Eglise她最有感觉，生理上能懂得，人被打的时候他就不吱声，它只有“嘭哧嘭哧”那种声音。在生活中你只有当医生才能够懂得这个道理，他就没有一次服过，就没有一次求饶过。
 
+包括对他的判决书，发了三次判决书给他收回去，最后来个判决书：强奸碎尸罪，最后他就非常冷静地告诉我：七哥，我连女的都没有碰过。就这，他非常淡，他对死已经完全从容的。
 
-据台媒报导，对于俄罗斯可能入侵乌克兰的时机，美国副国务卿薛曼（Wendy Sherman）26日表示，即将于2月4日开幕的北京冬奥可能会影响俄罗斯的决定。
+这个只有Eglise医生可以给大家解释，这个人一旦对——就是视死如归的时候，人对这些事就一下子完全变了个人，反过来说，人当惧怕死亡的时候，那种一说要判刑了，要判死刑，带上死刑镣，带上手铐送回来被拖回来的时候，哇，那个人就，还不如死了呢。就人那个，你看人回来的时候，突然人像就脱了，就未死先脱相。
 
-薛曼认为在北京举行冬奥期间，中国国家主席习近平应不会乐见俄罗斯选择在此时入侵乌克兰。
-且日前也有外媒报导，中方曾对俄罗斯表示希望北京冬奥期间俄国不要入侵乌克兰。惟中国外交部24日澄清，此报导不仅是子虚乌有，也是对中、俄关系的污蔑和挑衅。
+这个在生理上，你Eglise医生也可以给大家说一说，他就是一个人的，人视死如归的时候你会发现这个人，根本完全什么都无惧，人也变了个人，当人被恐惧，死亡给恐惧的时候，你就发现这人一下就完了。所以人活着就这么，灵魂就在这儿呢，就是一口气。就这个精气神儿，一个打击就把人彻底给摧垮。
+
+字幕来源：[2022年1月24日郭文贵先生直播全文字版](https://gnews.org/zh-hans/1909538/)
+
+编辑整理：Jacques；
+
+字幕文件制作：知津；
+
+视频制作及上传：Cindy；
+
+G-News发布：小满；
+
+**广而告之：尊敬的战友，你的每一篇文字、每一段视频、每一段社交媒体发文都是压垮骆驼的一根稻草，欢迎加入我们****——**[**日本银河系农场****Discord****群**](https://discord.com/channels/805765245758472202/851632878567948351)**，欢迎订阅我们的油管频道：**[**郭文贵先生直播精选**](https://www.youtube.com/channel/UCgvFZMztYVyUVRQgf5rHe0w/videos)**；欢迎关注盖特独家文贵先生大直播精选发布账号：**[**@MilesGuolive1**](https://gettr.com/user/MilesGuolive1)
+
+声明：文中内容根据郭文贵先生直播视频整理，如果文字内容与视频内容冲突则以原视频为准，标题仅为概括，标题与视频内容冲突之处仅代表作者个人观点。
+
+欢迎喜联盟进驻以及各农场兄弟姐妹们坐客串门，请通过以下方式关注及订阅我们——
+
+Discord：[日本银河系农场Discord群](https://discord.com/channels/805765245758472202/851632878567948351)；
+
+YouTube：[日本银河系农场](https://www.youtube.com/channel/UCYfGHsj66eHQFqAt8pYsXHA)、[小七工作室](https://www.youtube.com/channel/UCpJIF2wIaqb4VBqF3-V_7KA/videos)、[刁民热线](https://www.youtube.com/channel/UCybJyCc-WPhvAXHnjoh06SQ) 、[Hello Friend 你好,朋友](https://www.youtube.com/channel/UCTc1E9DAHXliBuHIveYORjQ/featured)、[Galaxy NFSC](https://www.youtube.com/channel/UCuoWQD3AbdCLi4VkSlYjyRQ/videos)、[银河系档案放映馆](https://www.youtube.com/channel/UCJ0FJt00cutaMfhE2kuXd3A) 、[郭文贵先生直播精选](https://www.youtube.com/channel/UCgvFZMztYVyUVRQgf5rHe0w/videos)；
+
+G-News：[喜马拉雅日本银河系农场 G-News](https://gnews.org/zh-hans/author/jgalaxy2021/)、[日本银河系农场-阿尔法星球](https://gnews.org/zh-hans/author/galaxyalphaplanet/) 、[银河勇气之星](https://gnews.org/zh-hans/author/yinyongqi/)、[NewFOC](https://gnews.org/zh-hans/author/newfoc/) ；
+
+盖特：[日本银河系农场@himalayajgalaxy盖特](https://www.gettr.com/user/himalayajgalaxy)；
+
+推特：[日本银河系农场\[email protected\]推特](https://twitter.com/HJapanGalaxyII)；
+
+G-TV：[日本银河系农场](https://gtv.org/user/60c0168b8ce6da73c416c24b#home)。
 
  
 
