--- a/gnews/11.md
+++ b/gnews/11.md
@@ -1,21 +1,41 @@
 ---
-title: 美提书面答复 力促俄奉行外交路线化解乌克兰危机
+title: 英国考虑在乌克兰危机中部署北约军力
 ---
-`GTV新聞訪談` [轉載自GNews](https://gnews.org/zh-hans/1937086/)
+`西班牙巴塞罗那喜悦农场` [轉載自GNews](https://gnews.org/zh-hans/1937100/)
 
-[撰稿日期]：2022.1.27
+**编译：wenwu**
+![](https://assets.gnews.org/wp-content/uploads/2022/01/tempsnip13英国考虑在乌克兰危机中部署北约军力.png)图片来源：reuters.com
+英国政府周六（29日）表示，作为加强欧洲边界计划的一部分——应对俄罗斯在与乌克兰的边境集结军队，英国正在考虑进行大规模的北约部署。
 
-[署名]：台湾宝岛农场dobi
+英国表示，俄罗斯对乌克兰的任何入侵都将受到迅速的制裁，对双方都是毁灭性的。
 
-[新闻连接]： 《https://udn.com/news/story/122663/6063923?from=udn-catelistnews\_ch2》
+英国首相鲍里斯·约翰逊（Boris Johnson）将于下周访问乌克兰，还将与弗拉基米尔·普京（Vladimir Putin）通电话。
+
+约翰逊的办公室说，他正在考虑向北欧（Nordics）和波罗的海（Baltics）地区的北约防务公约成员提供最大的可能，这将使部队人数增加一倍，并向爱沙尼亚（Estonia）发送防御性武器。
+
+约翰逊在一份声明中说：“这一方案将向克里姆林宫（Kremlin）发出一个明确的信息—我们不会容忍他们破坏稳定的活动，面对俄罗斯的敌意，我们将始终与我们的北约盟友站在一起；我已经命令我们的武装部队准备下周在欧洲各地进行部署，确保我们能够支持我们的北约盟友。”
+
+官员们将于下周在布鲁塞尔（Brussels）敲定该提议的细节，部长们将于周一（31日）讨论军事选项。
+
+约翰逊办公室表示，在面临做得不够的批评后，他将在下月初第二次出访，会见北约的同行，以加强外交努力。
+
+英国外交部长和国防部长也都将在未来几天前往莫斯科（Moscow）与俄罗斯同行进行会谈，目的是改善关系和缓和紧张局势。
+
+简评：
+
+根据七哥2022年1月30日的独家[直播](https://gtv.org/video/id=61f6900896ba5d73e0bee910)，欧亚的乌克兰和台湾的战争危机的背后主使是中共（资助俄罗斯攻打乌克兰），而且西方为了转移国内追求疫苗真相的压力与疫苗次声灾难的注意力，很可能让事态走向战争。
+
+**新闻来源**：[reuters.com] [Britain considering major NATO deployment amid Ukraine crisis](https://www.reuters.com/world/uk/britain-considering-major-nato-deployment-amid-ukraine-crisis-2022-01-29/) |发布时间：2022年01月29日｜
+
+* * *
+
+***审核：文乐
+校对：小东
+发布：信心满满***
+
+![](https://assets.gnews.org/wp-content/uploads/2022/01/GNEWS_CH.-1-3-5.jpeg)
 
 
-
-在俄罗斯和乌克兰冲突一触即发的危机局势中，俄罗斯要求北约和美国不得同意乌克兰加入北约盟国，并反对北约盟国提供乌克兰安全协助，泛称为「北约东扩」。针对俄罗斯的要求，美国和北约盟友目前虽仍未松口，但美国答应以书面方式回复俄罗斯；北约也在26日向俄罗斯大使馆交付书面答复，并宣称北约与美国立场一致，呼吁俄罗斯退兵。
-
-美国国务卿布林肯（Antony Blinken）表示，就看俄罗斯反应，美国准备好进入下一步协商，力促俄罗斯奉行外交路线。
-
-俄罗斯外交部长拉夫罗夫（Sergey Lavro）则表示，若不满意美方答复，不会坐视俄罗斯的要求陷入无尽的讨论，且若西方持续胁迫，莫斯科将会采取必要的报复作为。
 
  
 
