--- a/gnews/13.md
+++ b/gnews/13.md
@@ -1,21 +1,21 @@
 ---
-title: 捷报：伊维菌素终于被认可
+title: 美副国务卿薛曼：北京冬奥可能影响俄罗斯侵乌时机
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1937041/)
+`GTV新聞訪談` [轉載自GNews](https://gnews.org/zh-hans/1937087/)
 
-撰稿：东京樱花团/闻雨
-![](https://assets.gnews.org/wp-content/uploads/2022/01/image-2590.png)[图片来源](https://www.fwbusiness.com/covid-19/article_d602bf9d-afe9-5337-96c5-fd37b7e62846.html)
-东京 1月31日（路透社）报道：兴和制药公司（名古屋）1月31日表示，兴和已与北里大学完成了一项关于伊维菌素治疗中共病毒（新冠状病毒）感染的临床前研究。通过与北里大学的联合非临床研究实验，证实了伊维菌素对治疗中共病毒（新冠状病毒）感染，无论是对德尔塔（Delta）毒株还是对奥米炕（Omicron）毒株都有相同的抗病毒效果。
+[撰稿日期]：2022.1.27
 
-伊维菌素是根据北里大学名誉教授大村智先生的研究开发的，他在2015年获得了诺贝尔生理学•医学奖。伊维菌素主要在非洲国家被用作治疗寄生虫感染。
+[署名]：台湾宝岛农场dobi
 
-我们新中国联邦一直在呼吁，要求用伊维菌素治疗中共病毒，现在终于得到了证实。兴和制药公司用科学实验验证了这一切。期待着今后伊维菌素在治疗中共病毒方面发挥最大的作用。
+[新闻连接]： 《https://udn.com/news/story/122663/6065695?from=udn-catelistnews\_ch2》
 
-信息来源：[興和、「イベルメクチン」のオミクロン株への抗ウイルス効果を確認](https://news.yahoo.co.jp/articles/4924fb35eaa89d16884e9562defa71572857e2f7)
 
-*编辑：东京樱花团/喜马拉雅的微尘
-发布：东京樱花团/平安卿卿*
-![](https://assets.gnews.org/wp-content/uploads/2022/01/%E4%BA%8C%E7%BB%B4%E7%A0%81.jpg)
+
+据台媒报导，对于俄罗斯可能入侵乌克兰的时机，美国副国务卿薛曼（Wendy Sherman）26日表示，即将于2月4日开幕的北京冬奥可能会影响俄罗斯的决定。
+
+薛曼认为在北京举行冬奥期间，中国国家主席习近平应不会乐见俄罗斯选择在此时入侵乌克兰。
+且日前也有外媒报导，中方曾对俄罗斯表示希望北京冬奥期间俄国不要入侵乌克兰。惟中国外交部24日澄清，此报导不仅是子虚乌有，也是对中、俄关系的污蔑和挑衅。
+
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
