--- a/gnews/15.md
+++ b/gnews/15.md
@@ -1,17 +1,23 @@
 ---
-title: 所谓史无前例的北京冬奥会一定会露馅穿帮并成就甜蜜蜜
+title: 基辅和台湾发生的事情最终会使美国被迫加入并消灭邪恶
 ---
-`喜马拉雅日本银河系农场` [轉載自GNews](https://gnews.org/zh-hans/1937035/)
+`喜马拉雅日本银河系农场` [轉載自GNews](https://gnews.org/zh-hans/1937076/)
 
-G-TV视频链接：[https://gtv.org/video/id=61f77c5cd90bdd2085a2ff8a](https://gtv.org/video/id=61f77c5cd90bdd2085a2ff8a)
+G-TV视频链接：[https://gtv.org/video/id=61f77cd7d90bdd2085a2ffc3](https://gtv.org/video/id=61f77cd7d90bdd2085a2ffc3)
 
-**郭文贵先生：**听说现在在入境的时候已经发现有人携带的所谓的非法标识进去的，还高科技的材料的，已经被搜出来了，这个引起他们高度的准备啊，就法国这位被查肛门的女士就说，她说:“我要留下来我一定会裸奔，抗议共产党，我坚决回去,我不在这儿了啊。”这已经是不确定性，习本身他自己都不知道。就这几天发生的事情，已经足够他震撼了。
+**郭文贵先生：**我觉得普京在乌克兰的很多人都在说，这咱们说的最早的啊，我们是全世界最早的是说乌克兰，习要配合和台湾，这叫“双鹰头运动”，是吧？你取东我取西，然后在冬奥会前后。这是上次中国这个夏季奥运会的时候它不就干了克罗地亚（疑似克里米亚）嘛，是吧？这是普金的一贯的手法啊。
 
-但是不管如何都不会影响，这是一场所谓“史无前例的成功的开幕式的奥运会”——一定是这结局，因为它宣传嘛。
+那么现在比较好在哪里了呢？我觉得这次普金玩的不是跟西方讲数，也不是跟欧洲讲数，我觉得普京真的是在跟习唱一场相互的，这么演一场“二人转”的戏。这个戏他绝对不是想真打的，但是很有可能演着演着就成真了。
 
-这就是我说你在你家后院，你想搭个场景，你糊弄你孩子，你什么场景都出来，变什么法子都出来，但最终你改变不了，你给你孩子变成大象也好变成蛇也好都是假的，肯定不是真的，是吧？它都会被戳穿。这个中间，怎么会不表演露掉呢？一定会有露馅，一定会穿帮的。但是都不会影响它最终……
+我也不觉得，我现在我不觉得，就是说习去攻台湾，美国就像咱们头两天儿我们“甜蜜蜜运动” 美国的咱们合作者问我：“你觉得习要打这个台湾，你觉得美国人是应该加入、迅速加入呢还是马上，还是看看再加入呢？还是只是说在某种方面，还是派观察员呢？也就是说当雇佣军嘛，到前边儿去支持呢？”
 
-但是就是要这种效果，才会成就我们的”甜蜜蜜运动”，才能成就我们的“甜蜜蜜运动”。一定会发生的。谢谢。
+我说，这事儿还真不是你能说了算的，这完全取决于当时它要进台湾的方式和惨状，还有它进去以后想干的什么事情，最后你美国没有选择。你现在说都太早。就包括乌克兰，普京会在直接从边境上虚晃一枪，直接插入基辅的后面儿去。直取基辅，它一定会玩儿这招的。
+
+因为西方人没有，任何人都不相信，说不可能攻击基辅，他不可能攻击基辅，他可以攻击基辅旁边的小镇堪城（音），他不会攻击基辅。你们没有去过乌克兰，它旁边有个小镇叫“美女模特之镇”，就那个地方。他可能到那儿去。我说：“不是的，他可能直接干到基辅去，他就是要让整个乌克兰跪下。”
+
+到那个时候也不你西方美国决定的能不能进。就是美国认为，美国会代理人战争，会让这些人上。美国不会直接参与战争，我觉得也不是美国决定。这就是为什么我觉得在未来六周以内，在基辅和在台湾发生的事情，是不可控，不可设计，而恰恰也就是“甜蜜蜜运动”我们想达到的效果。
+
+而且最后，美国被迫加入，被迫加入。为什么呀？美国内部一堆的，跟乌克兰千丝万缕的关系，也有跟俄罗斯这种千丝万缕的关系，和共产党千丝万缕关系的，这种不可控的因素，最终会成就这次邪恶的势力这次会被消灭。而且是，不是以美国人的意志为转移的，是根据情况往下发展的，我就不再细说，这就是未来六周的好戏吧。
 
 字幕来源：[2022年1月24日郭文贵先生直播全文字版](https://gnews.org/zh-hans/1909538/)
 
