--- a/gnews/17.md
+++ b/gnews/17.md
@@ -1,17 +1,45 @@
 ---
-title: 德法斡旋 俄乌同意维持乌东停战下月续谈
+title: 纽约男子杀害三名亚裔后被判送精神病院
 ---
-`GTV新聞訪談` [轉載自GNews](https://gnews.org/zh-hans/1937019/)
+`西班牙巴塞罗那喜悦农场` [轉載自GNews](https://gnews.org/zh-hans/1937036/)
 
-[撰稿日期]：2022.1.27
+**编译：wenwu**
 
-[署名]：台湾宝岛农场dobi
+![](https://assets.gnews.org/wp-content/uploads/2022/01/tempsnip12纽约男子杀害三名亚裔后被判送精神病院.png)图片来源：news.yahoo.com
 
-[新闻连接]： 《https://udn.com/news/story/122663/6064108?from=udn-catebreaknews\_ch2》
+在2019年发生的暴力仇恨犯罪锤击事件中，被杀害的华人男子的遗孀对法院的裁定感到愤怒，因其最终结果是将嫌疑人送往精神病院而不是让他在本周面对应有的惩罚。
+
+据《纽约每日新闻》报道，仇恨犯罪锤击案受害者之一 Tsz Mat Pun（50岁）的遗孀 Jennifer Pun，其批评美国司法系统在周四（27日）将37岁的嫌疑犯亚瑟·马图诺维奇（Arthur Martunovich）转移到精神病院。
+
+“我以为美国的司法系统会做好自己的工作，将犯人绳之以法；他是有能力的。当他做出夺走三条生命的决定时，他是清醒的。”Jennifer Pun 通过翻译说。
+
+布鲁克林最高法院法官 Danny Chun 指定嫌犯为有“危险精神障碍”的马图诺维奇被认定对2019年1月15日在布鲁克林 Seaport Buffet 餐厅杀害老板 Kheong Ng-Thang、餐馆经理 Tsz Mat Pun 和他的侄子兼厨师 Fufai Pun（34岁）的事件“不负责任”。据报道，Tsz Mat Pun 和 Fufai Pun（唯一在现场被宣布死亡的受害者）从中国福建省的同一个村庄移民过来。
+
+据 NextShark 此前报道，2021年8月，法院决定不起诉马图诺维奇，因为他患有精神疾病，受害者的家人和社区成员对此表示愤怒；在周四的法庭审判中，Jennifer Pun 和 Fufai Pun 的遗孀艾米（Amy）在场，并被看到在判决后对检察官大喊大叫。
+
+“我不相信被告有那么严重的精神疾病；他非常冷静，他能够分辨出你[原文如此]是亚洲人还是西班牙人。”Jennifer Pun 说。
+
+“危险的精神障碍”是一项裁决，是对面临指控的嫌疑人的“最严重类别”。FindLaw 解释说，有“危险精神障碍”的人被认为“对自己或他人构成身体危险”。纽约州的精神错乱辩护裁定，被告应被安置在由精神卫生局监管的安全设施中，未经法院批准，将不允许释放或转移。
+
+布鲁克林地区检察官奥伦·亚尼夫（Oren Yaniv）说，嫌犯马图诺维奇将被送往一个上锁的最高安全级别的精神病院。“我不相信被告有那么严重的精神疾病；他非常冷静，他能够分辨出你[原文如此]是亚洲人还是西班牙人。”Jennifer Pun 说。
+
+据报道，Tsz Mat Pun 和 Fufai Pun（唯一在现场被宣布死亡的受害者）从中国福建省的同一个村庄移民过来；布鲁克林地区检察官奥伦·亚尼夫（Oren Yaniv）还补充说，嫌疑人在许多年内不会被释放，如果他被释放，这将使他们的办公室能够“在法官面前挑战这一决定”（康复后可能获释）。
+
+“我们相信，他将永远不会再有机会在我们的社区实施暴力，向受害者的朋友和亲人表示最深切的慰问，并祈祷他们能够得到安宁，”亚尼夫检察官说。
+
+马图诺维奇接受了中哈德逊法医精神病学中心（Mid-Hudson Forensic Psychiatric Center）医生的评估，他将继续留在该机构，并在今年七月后重新进行评估。
+
+**新闻来源**：[news.yahoo.com] [Ruling that man who killed three Asian men with hammer is ‘notresponsible’ due to mental illness angers victims’ widows](https://news.yahoo.com/ruling-man-killed-three-asian-220630784.html) | 发布时间：2022年01月28日｜
+
+* * *
+
+***审核：文乐
+校对：小东
+发布：信心满满***
+
+![](https://assets.gnews.org/wp-content/uploads/2022/01/GNEWS_CH.-1-3-5.jpeg)
 
 
-
-据台媒报导，俄罗斯和乌克兰今天透过巴黎会谈对乌东达成停火协议，协议中联合声明承诺俄、乌双方「无条件遵守停战」。惟因俄罗斯仍可能入侵，所以各方仍保留继续讨论的空间。而法国外交人员表示，这场停火会谈是透过德法两国居中斡旋；德国政府消息人士随后也证实，下一轮谈判预计于2月第2周在柏林举行。
 
  
 
