--- a/gnews/21.md
+++ b/gnews/21.md
@@ -1,31 +1,62 @@
 ---
-title: 美参院两党议员就制裁俄罗斯达成一致
+title: 人们在乌托邦似的大流行期间放弃了思考
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1936800/)
+`西班牙巴塞罗那喜悦农场` [轉載自GNews](https://gnews.org/zh-hans/1937016/)
 
-撰稿：东京樱花团/山顶闲人
-![](https://assets.gnews.org/wp-content/uploads/2022/01/2-93.png)
-[图片来源](http://nankaioverseas.net/NKAlumni/CuiQingping/WhyCapitol082520.html)
+翻译：Jenny Ball
 
-据法新社华盛顿30日报导**，**美国重量级联邦参议员今天表示，两党即将就制裁俄罗斯的相关法案达成共识，只要派军进入乌克兰，俄国经济就会遭“毁灭性打击”，还强调绝不重蹈二战前夕的姑息主义。
+![](https://assets.gnews.org/wp-content/uploads/2022/01/image-2592.png)图片来源：theepochtimes.com
 
-美国联邦参议院外交委员会主席、民主党参议员梅南德兹（Bob Menendez）表示，美国要向俄罗斯总统普京发出「任何这类侵略均不可接受」的明确信息，这点至关重要。梅南德兹在美国有线电视新闻网（CNN）里说：“我们不容再有慕尼黑时刻，普京不会对乌克兰收手。”还说相关立法距完成仅“一步之遥”。
+小说家、散文家和记者沃尔特·柯恩 (Walter Kirn) 目睹了放弃个人思维，而一味遵守权威人物 COVID-19 指导方针和命令，这使我们更类似于一个反乌托邦社会。
 
-所谓慕尼黑时刻意指1938年英法德义于慕尼黑召开会议，英法为避免开战与德国达成慕尼黑协议，在捷克没与会下同意将捷克的苏台德区（Sudetenland）割让给纳粹德国，是史上着名的姑息政策。
+反乌托邦社会的特点通常是，政府和技术控制，个人主义丧失，以及人们主要关心生存。
 
-梅南德兹放狠话的同时，英国已完成自身对俄的包裹制裁方案，英国外相特拉斯（Liz Truss）昨天说完全不给俄国躲掉的空间。梅南德兹与参院外委会的共和党要员里契（James Risch）连袂现身，表明两党决心。里契表示，一个两党的参议员联盟马不停蹄作业，盼完成一个代价会高到让蒲亭认真以对的制裁法案，“不同于2014年俄国兼并克里米亚，这回世界的反对力道更为可观”。里契还说有鉴俄国高度依赖能源出口，一旦侵乌遭制裁引发油价上涨，对全球经济会造成灾难性冲击，所有人都不该轻忽制裁后果。不过两党在制裁时机上仍有争论；一些共和党人称现在就应执行，但民主党人觉得还可再观察一阵。
+“我们被告知这是自利的规则，但事实上，正如这个故事和许多其他故事所证明的那样，似乎最突出的……人们本能的去取悦那些社会里有权力的人，”在 1 月 22 日的采访中，柯恩告诉 “美国思想领袖”的主持人扬·杰凯莱克（Jan Jekielek）。
 
-结合2022年1月30日文贵大直播中爆料信息，发动俄罗斯发动入侵乌克兰战争，俄罗斯现在1万亿美元左右的GDP会降到6000-7000亿美元左右，苏联时期失去的土地被夺回来了，几年后俄罗斯GDP会翻翻，再者部分北约国家现任领导人，因为疫苗灾难会让疫苗强制令的政客彻底曝光，即将死去的6-7亿人，西方人的血气勇气爆发。等到时疫苗灾难降临。不仅仅是普京搞乌克兰那么简单了，这些北约部分国家现任领导人自己就要搞战争了来掩盖疫苗灾难，综合分析下来，就算美国参议院对俄实施制裁也是杯水车薪，无法阻止俄罗斯西扩的野心，以及部分北约国家现任领导人政治图谋。因此在乌克兰的华人应该及早撤离，以防战争发生时遭遇不测。
+柯恩讲述了一位银行首席执行官的故事，他在 2001 年参加了沃伦·巴菲特的高尔夫锦标赛。就在双子塔遭到恐怖分子袭击的同一天，巴菲特禁止在高尔夫球场使用手机。 所以，为了顺从和取悦巴菲特，没有人透露他们偷偷使用了手机，尽管他们都刚刚听到了可怕的消息，但他们都对双塔楼和美国五角大楼被炸毁保持沉默。
 
-信息来源：
+“我认为[巴菲特的故事]总体上解释了很多关于人类的行为，但尤其是最近，因为人们对周围正在发生的事情的感觉，以及他们在这个 COVID 时代所面临的那种困难的感觉，很难说清楚，因为来自最高层的线路是：我们已经处理了这个问题，或者疫苗正在发挥作用，或者封锁没有成本，或者不管来自高层的线路是什么，”基恩说。
 
-#### [美参院两党议员：合力端出毁灭性对俄制裁](https://www.rfi.fr/cn/%E7%BE%8E%E5%8F%82%E9%99%A2%E4%B8%A4%E5%85%9A%E8%AE%AE%E5%91%98-%E5%90%88%E5%8A%9B%E7%AB%AF%E5%87%BA%E6%AF%81%E7%81%AD%E6%80%A7%E5%AF%B9%E4%BF%84%E5%88%B6%E8%A3%81)
+这位前普林斯顿大学毕业生说，他看到人们一味服从高层的指示，即使这与他们自己的经历相矛盾。“这是我见到和巴菲特一样情景的反应，几乎完全相同的现象。”
 
-编辑：东京樱花团/喜马拉雅的微尘
-发布：东京樱花团/yuxingcao01
-![](https://assets.gnews.org/wp-content/uploads/2021/12/樱花-3.jpg)
+他还看到人们（在他们自己的社会层面）诋毁可能不同意这些由大流行驱动的指导方针和命令的人。“在 COVID 期间发生的事情是，我们一次又一次地为这种情况找到了替罪羊，”基恩说。“每一步，我们都被要求将大流行本身，及其造成的损失，归咎于某人，通常是在我们身边的人，而不是在我们自己。”
 
+他说，如果你对社会科学和 1961 年的米尔格拉姆实验有所了解，这并不奇怪。耶鲁大学的心理学家斯坦利·米尔格拉姆（Stanley Milgram）进行了一系列实验，**他想找出人们会在多大程度上执行权威的命令，**即使这意味着要伤害另一个人。
 
+米尔格拉姆的结论是，大多数人会去伤害另一个人来执行政府官员或权威人物的命令。
+
+自 2020 年大流行开始以来，白宫和CDC，还有NIH等政府机构负责人，已采取各种措施来减缓 COVID-19 的传播，包括封锁、关闭学校、关闭小企业、强制戴口罩、保持社交距离、疫苗接种卡和疫苗授权。
+
+“**我们得到了摆脱这种流行病的承诺**。这就像人们去娱乐的逃生室之一，门打开了，但后面还有另一扇锁着的门。”柯恩讲述了政府为结束大流行而采取的各种措施：“如果你戴口罩，你就会摆脱它；如果你们保持距离；如果您待在家里；如果您从订购食物；如果您接种疫苗；如果你打加强针——这些诫命中的每一条……都会引发新的希望政权即将结束这一切，然后是新的一波失望，不是吗？”
+
+用于结束大流行的许多措施在阻止病毒传播方面都无效，**包括乔****·****拜登总统在内的许多人，都将这一无效结果和最近的 ****Omicron ****变**种**归咎于那些选择不接种疫苗的人**。
+
+拜登在 12 月 16 日的白宫讲话中说：“但它现在就在这里，而且它正在蔓延，而且还会增加。”“对于未接种疫苗的人，我们正面临一个严重疾病和死亡的冬天——如果你未接种疫苗的话 。”
+
+许多医疗专业人士会不同意拜登的观点。接种疫苗并不是预防严重疾病或感染 Omicron 的万无一失的方法。此外，与初始菌株相比，Omicron是一种温和的变体。
+
+“随着病毒继续变异，疫苗本身现在基本上已经过时了，”彼得·麦卡洛博士在周三播出的一次采访中告诉《新唐人》“国会报告”，他说，最近的一些研究表明，COVID-19 疫苗的有效性，随着新变种的出现而显着下降。
+
+![](https://assets.gnews.org/wp-content/uploads/2022/01/image-2594.png)图片来源：theepochtimes.com
+
+彼得·麦卡洛博士于 2022 年 1 月 23 日在华盛顿特区举行的“击败授权”游行期间，接受新唐人国会报告的采访。
+
+“我们进入到深度否认 COVID 政权后果的过程。在我看来，我们也深深地沉浸在对那些犯了这些错误并提出这些可怕政策的人的那种神秘崇拜中，”柯恩说。
+
+柯恩批评 COVID 的封锁是不合理的，因为小企业不得不关闭，但像 Costco 和亚马逊这样的大公司却被允许继续营业。
+
+“财富转移是巨大的。已经有计算。现在已经计算了新亿万富翁的数量，以及这 15 位顶级亿万富翁的财富翻两番或翻几番的程度。结果是：**富人变得更富有，而且他们比以往任何时候都更快地变得富有****。**”
+
+柯恩认为，那些从 COVID 指令中受益最多的人不希望事情回到大流行前的状态。 “坦率地说，看到社会上最有权势的人被激励想继续这种养生法是令人恐惧的，这对其他人来说是一场灾难。”
+
+素材链接：[theepochtimes.com] [People Giving Up Their Thinking During Pandemic in an Emerging Dystopia: Novelist Walter Kirn](https://www.theepochtimes.com/people-giving-up-their-thinking-during-pandemic-in-an-emerging-dystopia-novelist-walter-kirn_4235984.html?utm_source=Morningbrief&amp;utm_campaign=mb-2022-01-30&amp;utm_medium=email&amp;est=HJuAh6zodzcDdOrTjb6zfEi%2Fph8lveDjtht32SoGftwpcN7Z2htzmvx%2BF7uB%2BdBzjXApdQ%3D%3D)
+
+* * *
+
+*审核：文乐
+校对：阿伯塔
+发稿：Nuevo唐人*
+![](https://assets.gnews.org/wp-content/uploads/2022/01/GNEWS_CH.-1-3-4.jpeg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
