--- a/gnews/22.md
+++ b/gnews/22.md
@@ -1,21 +1,25 @@
 ---
-title: 1/27文贵直播：美授权撤离大使馆代表灭共第三道大门打开（粤语配音）
+title: 小米股价暴跌，市值蒸发4千多亿
 ---
-`秘密翻译组-精翻组 G-Translators/Elite Team` [轉載自GNews](https://gnews.org/zh-hans/1936727/)
+`英國倫敦喜莊園 Himalaya London Club UK` [轉載自GNews](https://gnews.org/zh-hans/1936864/)
 
-2022/1/27文贵直播：
+![](https://assets.gnews.org/wp-content/uploads/2022/01/6c12ddb68e9a7f360d0b6286e4c66a9d2.jpg)网络图片
+据网易新闻1月30日报道，小米股价近日连续暴跌，与最高值相比下跌54%。目前，小米总市值为4120亿港元，蒸发了4850亿港元。创始人雷军28日辞去小米公司董事长职务，据说为了专注小米造车。
 
-1. 100多个国际金融机构和公司和30几个大的国际公司要开始研究如何开始制裁中共高官
-2. 六四、南海争端、文化大革命、病毒威胁，都没撤离大使馆，就在冬奥会前一周撤
-3. 美国前国务卿还要访问台湾
-4. 普京去北京的安排有变化，各国领导都要求同个包厢
-5. 中共承诺中东几国，石油、天然气订购量翻1.5倍
-6. 美国这次授权撤离是不断不交
-7. 第三道大门打开了，病毒溯源、疫苗真相
-8. 50个国家要撤离大使馆
+小米手机曾经信誓旦旦地要与苹果手机竞争，2021年小米手机的全球市场销量也一度超过苹果手机，但是作为市值4千亿的小米手机与市值3万亿的苹果手机相比，差距不是一次销量就能够证明。中共国的企业没有技术支撑，完全靠假骗偷得来的技术缺乏持续更新和发展。一飞冲天之后，后续力量不足，还是要跌落地面，一蹶不振。
+
+新闻参考链接：[https://c.m.163.com/news/a/GUVMNURV0531M1VQ.html?spss=newsapp](https://c.m.163.com/news/a/GUVMNURV0531M1VQ.html?spss=newsapp)
+
+* * *
+
+- [点击阅读英国伦敦喜庄园在G-News 的更多精彩文章](https://gnews.org/zh-hans/author/himalaya_hawk/)
+- [点击观看英国伦敦喜庄园在G-TV的精彩视频](https://gtv.org/web/#/UserInfo/5ee680a45bd6f123dd104807)
+- [欢迎加入【英国伦敦喜庄园】Discord官方群](https://discord.gg/VsNaHaMUsy)
 
 
-By： 【秘密翻译组-精翻组 G-Translators/Elite Team】
+编辑：【英国伦敦喜庄园编辑部】
+
+![](https://assets.gnews.org/wp-content/uploads/2021/08/41bf97c0-3bb2-4a07-ad75-91b96dc3203c.jpg)
 
  
 
