--- a/gnews/27.md
+++ b/gnews/27.md
@@ -1,9 +1,9 @@
 ---
-title: 1/25文贵重大公告：美国政府“授权撤离”驻北京大使馆（粤语配音）
+title: 1/21文贵直播：谢里夫证明了中共在全球腐败各国领导人（粤语配音）
 ---
-`秘密翻译组-精翻组 G-Translators/Elite Team` [轉載自GNews](https://gnews.org/zh-hans/1936520/)
+`秘密翻译组-精翻组 G-Translators/Elite Team` [轉載自GNews](https://gnews.org/zh-hans/1936725/)
 
-1/25/2022 文贵重大公告：“甜蜜蜜运动”重大成果──美国政府刚刚做出的重大历史决定“授权撤离”美驻北京大使馆。
+1/21/2022 文贵直播：谢里夫和江家好，他证明了中共在全球腐败各国领导人；习控制了中东，江家控制了东亚和南亚；中共这时候搞冬奥会是找死，清零政策已让习自己变成“0”！
 
 By： 【秘密翻译组-精翻组 G-Translators/Elite Team】
 
