--- a/gnews/42.md
+++ b/gnews/42.md
@@ -1,12 +1,33 @@
 ---
-title: 卡车队聚集渥太华抗议加拿大中共病毒疫苗强制令
+title: GTV新闻访谈简报&#124;2022年1月30日晚
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1935086/)
+`纽约香草山MOS01` [轉載自GNews](https://gnews.org/zh-hans/1935239/)
 
-![](https://assets.gnews.org/wp-content/uploads/2022/01/20220131-scaled.jpg)
-*编辑：东京樱花团/简报小组
-发布：东京樱花团/tdownc2p*
-![](https://assets.gnews.org/wp-content/uploads/2021/12/yht.jpg)
+作者：香草山翻译部
+
+![](https://assets.gnews.org/wp-content/uploads/2022/01/GNEW-GTV-MOS-LOGO-6.jpg)
+
+
+![](https://assets.gnews.org/wp-content/uploads/2022/01/text-SC-9.png)
+校对：Stay文苑
+
+编辑：Stay文苑
+
+发稿：Stay文苑
+
+视频参看：[1.30  晚GTV新闻访谈](https://gtv.org/broadcast/watch/61f73bab96ba5d73e0bf73ca)
+
+![](https://assets.gnews.org/wp-content/uploads/2022/01/calendar-27.jpg)
+
+**更多资讯，更多关注**
+[**纽约香草山农场****GTV-****香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
+[**纽约香草山农场****GTV-MOS TALK ****香草山访谈**](https://gtv.org/user/5e9dcdd50dbf207957d89bcd)
+[**纽约香草山农场****Gettr**](https://www.gettr.com/user/himalaya_mos)
+[**纽约香草山农场**** YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
+[**欢迎加入纽约香草山农场**** Discord**](https://discord.gg/ChqXAHd)
+
+
+
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
