--- a/gnews/43.md
+++ b/gnews/43.md
@@ -1,75 +1,37 @@
 ---
-title: 【Michael.Tonny专栏】新南威尔士州数据说明COVID-19疫苗带来严重灾难（下）
+title: 法囯民众示威，呼吁政府抵制冬奥会
 ---
-`温哥华扬帆农场` [轉載自GNews](https://gnews.org/zh-hans/1933874/)
+`墨尔本雅典娜农场` [轉載自GNews](https://gnews.org/zh-hans/1935102/)
 
-作者：加拿大温哥华扬帆农场[Michael.Tonny](https://gnews.org/zh-hans/author/michaeltonny/)
+#### 【雅典娜快讯】，紧贴时事脉搏
 
-![](https://assets.gnews.org/wp-content/uploads/2021/12/michael-4.jpg)
+整理/编辑：小红帽
 
-接[【Michael.Tonny专栏】新南威尔士州数据说明COVID-19疫苗带来严重灾难（上）](https://gnews.org/zh-hans/1933733/)
+- ![](https://assets.gnews.org/wp-content/uploads/2022/01/12122.png)图片来源：雅典娜设计组
 
-2021年11月26日至2022年1月8日，澳大利亚新南威尔士州总共273,511例明确知道疫苗接种状态的确诊病例中，打了一针疫苗的2,578例，接种两针或两针以上的267,381例，未接种疫苗的人群中仅确诊了3,552例。
 
-![](https://assets.gnews.org/wp-content/uploads/2022/01/image-367-1.png)
+根据《自由亚洲电台》1月30日报道，1月29日，几百名法国、维吾尔、西藏、香港等民众集聚到法国外交部旁广场，呼吁法国政府抵制北京冬季奥运。
 
-2021年11月26日至2022年1月8日，3,022名Covid-19住院患者中，打了一针疫苗的80例，接种两针或两针以上的2,627例，未接种疫苗的人群中仅315例。
+示威人员指出，中共压迫各地人民，违反民主与奥运精神，不配主办奥运，要求法国政府不要派代表出席北京冬奥会。
 
-![](https://assets.gnews.org/wp-content/uploads/2022/01/image-368-1.png)
+在场的法国“公共广场”（Place publique）青年部与社会党（PS）、欧洲生态绿党（EELV）等法国政党，以及10多个维吾尔、西藏、香港、越南等公民团体一起呼吁抵制北京冬奥会。
 
-2021年11月26日至2022年1月8日，282名进入ICU的患者中，打了一针疫苗的12例，接种两针或两针以上的215例，未接种疫苗的人群中仅55例。
+欧洲议会议员格鲁克斯曼（Raphaël Glucksmann）出席了示威活动并表示：“我们看到出席奥运的领导人名单，大多是国际上独裁国家领袖的相互支援，法国并不属于这类范畴的国家。法国有民主人权，不应该为中共政权的宣传行动背书。我们无法接受，因为维吾尔、西藏、民主香港都被压迫，台湾也面临威胁。”
 
-![](https://assets.gnews.org/wp-content/uploads/2022/01/image-369-1.png)
+法国总统候选人、前司法部长陶比拉（Christiane Taubira）也抵达会场并发言，维吾尔族的确面临种族灭绝的行为，不仅希望透过外交力量敦促国际组织进行调查，也强调无法接受法国派出官方代表出席北京冬奥会。
 
-2021年11月26日至2022年1月8日，282名死者中，打了一针疫苗的3例，接种两针或两针以上的67例，未接种疫苗的人群中仅21例。
+期间，欧洲维吾尔学院主席、旅法维族人代表迪丽努尔·热依汗（Dilnur Reyhan）和《中国古拉格幸存者》一书的作者古巴哈·海蒂瓦吉（Gulbahar Haitiwaji）也出席了示威活动以反对法国参加冬奥会。
 
-![](https://assets.gnews.org/wp-content/uploads/2022/01/image-370-1.png)
+新闻链接：[法囯民间组织示威 呼吁政府抵制北京冬奥](https://www.rfa.org/mandarin/yataibaodao/huanjing/cl-01302022171829.html)
 
-在确诊、住院、ICU和死亡中，打了一针的似乎都最少，但这完全是假象，不能说明接种一针疫苗似乎感染、住院、ICU和死亡都很少。
+发布：*tianzhihuan*
 
-首先，根据澳大利亚卫生部门的统计规则（见报告31页），大量打了一针疫苗不超过21天的COVID-19病例被计算在了未接种疫苗人群中；
-
-其次除了37.4%的5~11岁的儿童仅打了一针外，在年满16岁的人群中，95.4%被打了一针，94%被打了两针，也就是说，仅打了一针的仅1.4%，；而在12~15岁的人群中，打了一针的83.2%，打了两针的78.5%，也就是说，仅打了一针的才4.7%，基数本来就少。
-
-而在新南威尔士州公布的疫苗接种状态中，只公布了年满16岁的人接种疫苗比率的时间曲线，并未公布16岁以下的人群是什么时候接种的。这让我们难以判断究竟有多少16岁以下的人是在确诊前21天内打的第一针。
-
-![](https://assets.gnews.org/wp-content/uploads/2022/01/Snipaste_2022-01-30_23-46-13.png)
-
-根据澳大利亚卫生部门的介绍，澳大利亚是从去年1月25日开始向年满16岁的人注射辉瑞疫苗，去年7月22日开始向12~15岁的青少年打辉瑞疫苗，去年12月5日开始向5~11岁的儿童打辉瑞疫苗。
-
-![](https://assets.gnews.org/wp-content/uploads/2022/01/Comirnaty-Pfizer-is-approved-for-use-in-people-aged-5-years-and-over.png)
-
-澳大利亚从去年2月15日开始向年满18岁的人注射阿斯利康疫苗。
-
-![](https://assets.gnews.org/wp-content/uploads/2022/01/Vaxzevria-AstraZeneca-is-approved-for-use-in-people-aged-18-years-and-over.png)
-
-澳大利亚从去年8月9日开始向年满18岁的人注射Moderna疫苗，9月3日开始向12~15岁的青少年注射Moderna疫苗。
-
-![](https://assets.gnews.org/wp-content/uploads/2022/01/Spikevax-Moderna-is-approved-for-use-in-people-aged-12-years-and-over.png)
-
-而2021年11月26日~2022年1月8日的中位日期为2021年12月17日，也就是说，5~11岁的儿童都是确诊前21天内第一次接种的疫苗，都被计入了未接种疫苗的人群。而12~15岁的青少年是从去年7月22日和9月3日才开始打疫苗，这些人打疫苗的时间比率曲线完全不知道。
-
-因此，如果南威尔士州不公布各年龄段的疫苗接种时间线，同时把接种第一针疫苗不超过21天的人混入未接种疫苗的人群中计算，极容易对公众产生误导，或者说错误的把大量第一次接种疫苗不超过21天的COVID-19患者计入未接种疫苗人群中，掩盖疫苗灾难的真相！
-
-但无论如何，南威尔士州的数据说明，COVID-19确诊、住院、ICU和死亡人群中，绝大多数为疫苗接种者，而未接种疫苗的人微乎其微。疫苗灾难正在爆发！
-
-参考资料：
-
-[NSW – vaccine targets and forecasts](https://www.covid19data.com.au/vaccine-forecasts)
-
-[COVID-19 vaccination update Vaccine doses administered to NSW populations](https://www.health.nsw.gov.au/Infectious/covid-19/Pages/stats-nsw.aspx#today)
-
-[Spikevax (Moderna)](https://www.health.gov.au/initiatives-and-programs/covid-19-vaccines/approved-vaccines/moderna)
-
-[Comirnaty (Pfizer)](https://www.health.gov.au/initiatives-and-programs/covid-19-vaccines/approved-vaccines/pfizer)
-
-[Vaxzevria (AstraZeneca)](https://www.health.gov.au/initiatives-and-programs/covid-19-vaccines/approved-vaccines/astrazeneca)
-
-[COVID-19 WEEKLY SURVEILLANCE IN NSW  Epidemiological week 1, ending 8 January 2022](https://www.health.nsw.gov.au/Infectious/covid-19/Documents/covid-19-surveillance-report-20220120.pdf)
-
-[COVID-19 WEEKLY SURVEILLANCE IN NSW EPIDEMIOLOGICAL](https://www.health.nsw.gov.au/Infectious/covid-19/Pages/weekly-reports.aspx)
-
-编辑：[Michael.Tonny](https://gnews.org/zh-hans/author/michaeltonny/)上传：[Michael.Tonny](https://gnews.org/zh-hans/author/michaeltonny/)
+更多资讯，请关注：
+[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
+[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
+[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
+[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/KQQVvwBNvm)
+[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
 
  
 
