--- a/gnews/45.md
+++ b/gnews/45.md
@@ -1,32 +1,75 @@
 ---
-title: 中日财经爆┃房企2022年美元债兑付高峰将至 暴雷名单近期逐一揭晓
+title: 【Michael.Tonny专栏】新南威尔士州数据说明COVID-19疫苗带来严重灾难（下）
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1933720/)
+`温哥华扬帆农场` [轉載自GNews](https://gnews.org/zh-hans/1933874/)
 
-撰稿：东京樱花团丨喜马拉雅的微尘
-![](https://assets.gnews.org/wp-content/uploads/2022/01/unnamed-4-1.png)
-[*图片来源*](https://xueqiu.com/1290113342/200215523)
+作者：加拿大温哥华扬帆农场[Michael.Tonny](https://gnews.org/zh-hans/author/michaeltonny/)
 
-Wind数据显示，2022—2025年是房企美元债兑付高峰期，房企海外债到期余额分别为273.25亿美元、182.8亿美元、190.32亿美元及179.94亿美元，其中2022年偿债压力集中于上半年。
+![](https://assets.gnews.org/wp-content/uploads/2021/12/michael-4.jpg)
 
-据不完全统计，截至一季度末，上市房企共有43只存量美元债券到期，涉及41家房企，发行总额超157亿美元。
+接[【Michael.Tonny专栏】新南威尔士州数据说明COVID-19疫苗带来严重灾难（上）](https://gnews.org/zh-hans/1933733/)
 
-其中，1月到期的债券数量最多，共有21只，即将到来的3月偿债压力也不小，偿还额度近70亿美元，已经深陷债务泥沼的中国恒大将迎来一笔20.25亿美元债的到期。
+2021年11月26日至2022年1月8日，澳大利亚新南威尔士州总共273,511例明确知道疫苗接种状态的确诊病例中，打了一针疫苗的2,578例，接种两针或两针以上的267,381例，未接种疫苗的人群中仅确诊了3,552例。
 
-但截至目前，仅旭辉、中梁、上坤等几家企业对外宣称，已将1月到期美元债的兑付资金汇至投资者指定账户。
+![](https://assets.gnews.org/wp-content/uploads/2022/01/image-367-1.png)
 
-对于大多数房企来说，当前这个节点，偿债依然是难以跨越的障碍，甚至有房企直接选择“躺平”。1月19日，中国奥园公告称，其将不会为即将于2022年1月20日本金总额为1.88亿美元及1月23日到期本金总额为5亿美元的美元票据支付余下本金及最后一期利息；此外，在30天宽限期届满后，其也将不会支付于2023年6月到期本金总额为2亿美元、2024年6月到期本金总额为2亿美元的美元票据项下的最新一期利息。
+2021年11月26日至2022年1月8日，3,022名Covid-19住院患者中，打了一针疫苗的80例，接种两针或两针以上的2,627例，未接种疫苗的人群中仅315例。
 
-除了奥园外，新力也公告称1月24日到期的2.42亿美元发生交叉违约。 截至1月28日，一季度美元债超过5亿美元主体还有中国金茂、雅居乐、融信中国、盈大地产、中骏集团等，20.25亿美元的到期债券也将令恒大的债务难题雪上加霜，这些美元债将何去何从，答案将在近期逐一揭晓。
+![](https://assets.gnews.org/wp-content/uploads/2022/01/image-368-1.png)
 
-信息来源：
+2021年11月26日至2022年1月8日，282名进入ICU的患者中，打了一针疫苗的12例，接种两针或两针以上的215例，未接种疫苗的人群中仅55例。
 
-[**一季度41家房企还债近160亿：债务兑付高峰的另一面｜关注2022美元债\_财经网**](http://m.caijing.com.cn/article/247151?target=blank)
+![](https://assets.gnews.org/wp-content/uploads/2022/01/image-369-1.png)
 
-校对：东京樱花团 / 東洋武士
-发布：东京樱花团 / yuxingcao01
-![](https://assets.gnews.org/wp-content/uploads/2021/12/樱花-3.jpg)
+2021年11月26日至2022年1月8日，282名死者中，打了一针疫苗的3例，接种两针或两针以上的67例，未接种疫苗的人群中仅21例。
 
+![](https://assets.gnews.org/wp-content/uploads/2022/01/image-370-1.png)
+
+在确诊、住院、ICU和死亡中，打了一针的似乎都最少，但这完全是假象，不能说明接种一针疫苗似乎感染、住院、ICU和死亡都很少。
+
+首先，根据澳大利亚卫生部门的统计规则（见报告31页），大量打了一针疫苗不超过21天的COVID-19病例被计算在了未接种疫苗人群中；
+
+其次除了37.4%的5~11岁的儿童仅打了一针外，在年满16岁的人群中，95.4%被打了一针，94%被打了两针，也就是说，仅打了一针的仅1.4%，；而在12~15岁的人群中，打了一针的83.2%，打了两针的78.5%，也就是说，仅打了一针的才4.7%，基数本来就少。
+
+而在新南威尔士州公布的疫苗接种状态中，只公布了年满16岁的人接种疫苗比率的时间曲线，并未公布16岁以下的人群是什么时候接种的。这让我们难以判断究竟有多少16岁以下的人是在确诊前21天内打的第一针。
+
+![](https://assets.gnews.org/wp-content/uploads/2022/01/Snipaste_2022-01-30_23-46-13.png)
+
+根据澳大利亚卫生部门的介绍，澳大利亚是从去年1月25日开始向年满16岁的人注射辉瑞疫苗，去年7月22日开始向12~15岁的青少年打辉瑞疫苗，去年12月5日开始向5~11岁的儿童打辉瑞疫苗。
+
+![](https://assets.gnews.org/wp-content/uploads/2022/01/Comirnaty-Pfizer-is-approved-for-use-in-people-aged-5-years-and-over.png)
+
+澳大利亚从去年2月15日开始向年满18岁的人注射阿斯利康疫苗。
+
+![](https://assets.gnews.org/wp-content/uploads/2022/01/Vaxzevria-AstraZeneca-is-approved-for-use-in-people-aged-18-years-and-over.png)
+
+澳大利亚从去年8月9日开始向年满18岁的人注射Moderna疫苗，9月3日开始向12~15岁的青少年注射Moderna疫苗。
+
+![](https://assets.gnews.org/wp-content/uploads/2022/01/Spikevax-Moderna-is-approved-for-use-in-people-aged-12-years-and-over.png)
+
+而2021年11月26日~2022年1月8日的中位日期为2021年12月17日，也就是说，5~11岁的儿童都是确诊前21天内第一次接种的疫苗，都被计入了未接种疫苗的人群。而12~15岁的青少年是从去年7月22日和9月3日才开始打疫苗，这些人打疫苗的时间比率曲线完全不知道。
+
+因此，如果南威尔士州不公布各年龄段的疫苗接种时间线，同时把接种第一针疫苗不超过21天的人混入未接种疫苗的人群中计算，极容易对公众产生误导，或者说错误的把大量第一次接种疫苗不超过21天的COVID-19患者计入未接种疫苗人群中，掩盖疫苗灾难的真相！
+
+但无论如何，南威尔士州的数据说明，COVID-19确诊、住院、ICU和死亡人群中，绝大多数为疫苗接种者，而未接种疫苗的人微乎其微。疫苗灾难正在爆发！
+
+参考资料：
+
+[NSW – vaccine targets and forecasts](https://www.covid19data.com.au/vaccine-forecasts)
+
+[COVID-19 vaccination update Vaccine doses administered to NSW populations](https://www.health.nsw.gov.au/Infectious/covid-19/Pages/stats-nsw.aspx#today)
+
+[Spikevax (Moderna)](https://www.health.gov.au/initiatives-and-programs/covid-19-vaccines/approved-vaccines/moderna)
+
+[Comirnaty (Pfizer)](https://www.health.gov.au/initiatives-and-programs/covid-19-vaccines/approved-vaccines/pfizer)
+
+[Vaxzevria (AstraZeneca)](https://www.health.gov.au/initiatives-and-programs/covid-19-vaccines/approved-vaccines/astrazeneca)
+
+[COVID-19 WEEKLY SURVEILLANCE IN NSW  Epidemiological week 1, ending 8 January 2022](https://www.health.nsw.gov.au/Infectious/covid-19/Documents/covid-19-surveillance-report-20220120.pdf)
+
+[COVID-19 WEEKLY SURVEILLANCE IN NSW EPIDEMIOLOGICAL](https://www.health.nsw.gov.au/Infectious/covid-19/Pages/weekly-reports.aspx)
+
+编辑：[Michael.Tonny](https://gnews.org/zh-hans/author/michaeltonny/)上传：[Michael.Tonny](https://gnews.org/zh-hans/author/michaeltonny/)
 
  
 
