--- a/gnews/46.md
+++ b/gnews/46.md
@@ -1,32 +1,77 @@
 ---
-title: 中日财经爆┃全球通胀油价攀升 经济陷入滞胀股市将崩盘
+title: 【Michael.Tonny专栏】新南威尔士州数据说明COVID-19疫苗带来严重灾难(上)
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1933693/)
+`温哥华扬帆农场` [轉載自GNews](https://gnews.org/zh-hans/1933733/)
 
-撰稿：东京樱花团丨麗子
-![](https://assets.gnews.org/wp-content/uploads/2022/01/unnamed-2-1.png)
-[*图片来源*](http://fromnewworld.com/wp-content/uploads/2017/01/stock.jpg)
+作者：加拿大温哥华扬帆农场[Michael.Tonny](https://gnews.org/zh-hans/author/michaeltonny/)
+![](https://assets.gnews.org/wp-content/uploads/2021/12/michael-4.jpg)
+COVID-19病毒是中共对全世界发动的生化武器战争投放的生化武器，试验性的COVID-19病毒疫苗不能预防感染，只会导致身体免疫力持续下降，感染中共病毒的风险成倍增加。
 
-在美国，作为通胀指标的消费者价格指数（CPI）在 2021 年 12 月同比上涨 7%，汽油价格在过去一年上涨了 50%，二手车价格上涨了 37%。对公民生活的影响尤其大，高油价提高了生产一切的成本，包括服装、肉类、蔬菜和水果。加上新冠疫情导致的劳动力短缺、物流停滞、房价飙升等因素，价格上行压力暂时不大可能减弱。
+![](https://assets.gnews.org/wp-content/uploads/2022/01/640px-Wuhan_Institute_of_Virology_main_entrance.jpg)
 
-德国、法国等19个欧元区国家的CPI（2021年12月）也同比上涨5%，是1997年以来的最高涨幅。英国也同比增长 5.4%，为 30 年来最大增幅。 在新兴经济体巴西，价格将继续同比上涨 10% 以上。在日本，去年 12 月的 CPI 连续第四个月同比上涨 0.8%。 扣除生鲜食品后的核心 CPI 也上涨 了0.5%。 相关专家认为， 4月份之后，核心CPI将可能加速至1%左右。
+尽管澳大利亚新南威尔士州（New South Wales）的每周COVID-19监测报告（[COVID-19 WEEKLY SURVEILLANCE IN NSW EPIDEMIOLOGICAL](https://www.health.nsw.gov.au/Infectious/covid-19/Pages/weekly-reports.aspx)）刻意偷换概念，将很多接种COVID-19病毒疫苗不超过21天的COVID-19感染者记入未接种人群，仍然无法掩盖疫苗带来的严重灾难的事实！
 
-在通货膨胀时期，对股票、房地产和商品的投资据说比现金更能“抵抗通货膨胀”，因为现金的价值在未来会被稀释。在美国股市中，由于资本过剩，资金继续流入，相关人员正在密切关注通货膨胀和由此产生的利率上升对市场的影响。
+在《[COVID-19 WEEKLY SURVEILLANCE IN NSW EPIDEMIOLOGICAL WEEK 01 ENDING 8 JANUARY 2022 Published 20 January 2022](https://www.health.nsw.gov.au/Infectious/covid-19/Documents/covid-19-surveillance-report-20220120.pdf)》报告第31页，关于COVID-19疫苗接种状态分四种情形的定义：
 
-对于股票价格来说，经济增长率是一个积极因素，而利率和通货膨胀是消极因素。这里的利率是长期利率，它是各种利率的基准，如抵押贷款利率。目前美国的长期利率为1.7%（截至1月25日）。如果把美联储2%的目标通胀率（一定时期内的平均通胀率）加进去，约为3.7%左右。这与经合组织（OECD）预测的美国今年3.7%的增长水平相同。
+![](https://assets.gnews.org/wp-content/uploads/2022/01/NWS-COVID-19-Vaccine-Status.jpg)COVID-19 & Winter Statistical Report
 
-但是，如果通货膨胀继续上升，利率上升，而经济增速低于此水平，那么对股价将会造成不利影响。此外，今年上半年美国股市的风险是高油价，这也是通胀的一个因素。1月19日，纽约WTI原油价格创下每桶86美元的七年新高，反映了产油国对增产的谨慎态度和中东地区的地缘政治风险。如果原油接近100美元水平，对通胀和经济恶化同时进行的“滞胀”的担忧将增加，宏观经济可能会看跌。 如果将其视为机会的投机者进行“卖空”，股市可能会崩溃。日本的股票也会受到通货膨胀的影响。就目前而言，企业能够暂且做到不把价格上涨转嫁到最终消费价格上，但能坚持多久，还有待观察。
+未接种疫苗（No effective dose）：指从未接种过COVID-19病毒疫苗或者在PCR检测COVID-19呈阳性时，距离接种第1针COVID-19疫苗的日期不超过21天。
 
-信息来源：
+接种过1针疫苗（Partially vaccinated）：指PCR检测COVID-19呈阳性时，接种过1针疫苗，且距离接种第1针疫苗的时间大于21天。如果接种了2针，则距离接种第2针的日期不超过14天。或者接种了1针Johnson & Johnson疫苗后不超过14天。
 
-[**米欧でインフレ加速  原油高の追い打ちで株価暴落も**](https://news.yahoo.co.jp/articles/d5b4ed0c43f2a25ca16bb633f359b483d4412f99)
+完全接种疫苗（Fully vaccinated）：指PCR检测COVID-19呈阳性时，接种完所有疫苗，且接种疫苗的时间超过14天。
 
-校对：东京樱花团 / 東洋武士
-发布：东京樱花团 / yuxingcao01
-![](https://assets.gnews.org/wp-content/uploads/2021/12/樱花-3.jpg)
+疫苗接种状态不明确（Under investigation）
 
+根据这样的定义，显然存在大量打了一针疫苗不超过21天的COVID-19病例被计算在了未接种疫苗人群。
 
+截止到2022年1月29日晚上8点，新南威尔士州共接种4,776,938剂疫苗，年满16岁的人群一针疫苗接种率高达95.4%，两针疫苗接种率为94%，年满18岁的人群中，三针或加强针接种率达​38.8%。甚至12~15岁的青少年也有83.2%被打了疫苗，连5~11岁的儿童也有37.4%受到疫苗祸害。
 
+![](https://assets.gnews.org/wp-content/uploads/2022/01/Snipaste_2022-01-30_22-27-09.png)
+
+在如此高的疫苗接种率下，新南威尔士州最近感染COVID-19病例数激增。上周新增感染病例110,883例，本周也有63,051例，全州累计确诊814,161例,占全州816.6万人口的10%。
+
+![](https://assets.gnews.org/wp-content/uploads/2022/01/Snipaste_2022-01-30_23-59-13.png)
+
+仅仅在1月22日一天内，新南威尔士州新增COVID-19确诊人数就达到非常恐怖的92,264人，占全州人口的千分之1.13。
+
+![](https://assets.gnews.org/wp-content/uploads/2022/01/Snipaste_2022-01-31_00-05-12.png)
+
+最近1个月，新南威尔士州新增COVID-19确诊病例激增。
+![](https://assets.gnews.org/wp-content/uploads/2022/01/Snipaste_2022-01-31_00-12-12.png)
+不单是新南威尔士州，整个澳大利亚最近一个月新增COVID-19确诊病例也激增。
+
+![](https://assets.gnews.org/wp-content/uploads/2022/01/Snipaste_2022-01-31_00-09-36.png)
+
+下表为1月20日《[COVID-19 WEEKLY SURVEILLANCE IN NSW EPIDEMIOLOGICAL WEEK 01 ENDING 8 JANUARY 2022 Published 20 January 2022](https://www.health.nsw.gov.au/Infectious/covid-19/Documents/covid-19-surveillance-report-20220120.pdf)》报告第7页，表5，2021年11月26日~2022年1月8日，新南威尔士州COVID-19新增确诊、住院、ICU和死亡数据。
+
+![](https://assets.gnews.org/wp-content/uploads/2022/01/Table-5-Hospitalisations-ICU-admissions-and-deaths-among-cases-diagnosed-with-COVID-19-by-vaccination-status-NSW-from-26-November-2021-to-8-January-2022.jpg)
+
+我们来研究明确知道疫苗接种状态的COVID-19受害者的情况。
+![](https://assets.gnews.org/wp-content/uploads/2022/01/Hospitalisations-ICU-admissions-and-deaths-among-cases-diagnosed-with-COVID-19-by-vaccination-status.jpg)
+接种疫苗患者的无论在确诊、住院、ICU和死亡中都占绝大多数。
+
+![](https://assets.gnews.org/wp-content/uploads/2022/01/image-366-1.png)
+
+接[【Michael.Tonny专栏】新南威尔士州数据说明COVID-19疫苗带来严重灾难（下）](https://gnews.org/zh-hans/1933874/)
+
+参考资料：
+
+[NSW – vaccine targets and forecasts](https://www.covid19data.com.au/vaccine-forecasts)
+
+[COVID-19 vaccination update Vaccine doses administered to NSW populations](https://www.health.nsw.gov.au/Infectious/covid-19/Pages/stats-nsw.aspx#today)
+
+[Spikevax (Moderna)](https://www.health.gov.au/initiatives-and-programs/covid-19-vaccines/approved-vaccines/moderna)
+
+[Comirnaty (Pfizer)](https://www.health.gov.au/initiatives-and-programs/covid-19-vaccines/approved-vaccines/pfizer)
+
+[Vaxzevria (AstraZeneca)](https://www.health.gov.au/initiatives-and-programs/covid-19-vaccines/approved-vaccines/astrazeneca)
+
+[COVID-19 WEEKLY SURVEILLANCE IN NSW  Epidemiological week 1, ending 8 January 2022](https://www.health.nsw.gov.au/Infectious/covid-19/Documents/covid-19-surveillance-report-20220120.pdf)
+
+[COVID-19 WEEKLY SURVEILLANCE IN NSW EPIDEMIOLOGICAL](https://www.health.nsw.gov.au/Infectious/covid-19/Pages/weekly-reports.aspx)
+
+编辑：[Michael.Tonny](https://gnews.org/zh-hans/author/michaeltonny/)上传：[Michael.Tonny](https://gnews.org/zh-hans/author/michaeltonny/)
 
  
 
