--- a/gnews/53.md
+++ b/gnews/53.md
@@ -1,128 +1,273 @@
 ---
-title: 独家报道：奥地利联邦宪法法院就强制新冠疫苗接种令照会卫生官员质疑其合法性
+title: 77国际功成农场及友人带来的新春祝福
 ---
-`英国伦敦喜庄园德语 Himalaya London Club UK-DE` [轉載自GNews](https://gnews.org/zh-hans/1930543/)
+`Himalaya 77 G-Engineers` [轉載自GNews](https://gnews.org/zh-hans/1931292/)
 
-简评：瞌睡猫
-
-翻译：英喜德语组幺蛾子，澜磬筱竺，Miao，Wistaria，Luckycky
-![](https://assets.gnews.org/wp-content/uploads/2022/01/IMAGE-2022-01-29-235422.jpeg)图片来源：2022年1月28日官网截屏/ 奥地利联邦宪法法院
-
-简评：
-
-经奥地利国会内部人士爆料，奥地利宪法法院Dr. Andreas Hauer大法官于2022年1月22日向奥地利联邦社会事务、健康、护理和消费者保护部发出正式照会，要求该部部长 Wolfgang Mückstein 于2月18号之前到国家宪法法院就其目前所实施各种针对CCP病毒的强制措施，包括对未接种人群实施的残酷无情的有差别强制隔离措施进行一些列的答辩。 这个时刻联邦宪法法院发出照会，笔者认为，象征了奥地利法律系统开始关注这一系列行政措施开始关注这一系列行政措施是否具有合理性，是否有必要实施。
-
-目前，奥地利是欧洲第一个通过新冠疫苗接种强制令的国家，也是为数不多几个对未接种人群进行强制隔离的国家。尽管实施了最严格的隔离和新冠疫苗接种政策，奥地利CCP病毒感染新增案例居高不下，在1月28日截稿日更达到了前所未有的38681新增病例。我们不仅要问，到底是没打新冠疫苗的人群还是打了新冠疫苗的人群在得病并传播病毒？到目前为止奥地利政府和卫生部门不仅就这些问题没有给出明确答案，而且还一而再再而三地歧视未接种CCP病毒疫苗人群，并且以罚款等各种名义胁迫百姓接种CCP病毒实验性新冠疫苗，这种新冠疫苗不可靠，有严重副作用，甚至有死亡的危险。奥地利政府所采取和颁布的各项措施充满争议，不光引起了民众的反感，在全国各地进行大游行，如今也引来了奥地利宪法法院的密切关注和法律介入。
-
-1月14日美国最高法院否决了拜登政府对雇员超过百名公司的强制接种及检测行政命令，打开了美欧民主国家各国最高立法机构介入并阻止执法部门利用抗击CCP新冠病毒的名义进行无限制扩充权力的先例。现在奥地利宪法法院紧跟其后，将给在欧洲各国政府强制新冠疫苗，强制隔离越权最严重的奥地利带来转机。Dr. Andreas Hauer大法官发出的照会思维严谨，不带有任何政治倾向，所有问题紧紧围绕科学数据和法律，将对其它欧洲各国依法反对强制新冠疫苗和隔离的斗争起到一个很好的榜样作用。
-
-法令发自：
-
-**宪法法院 **
-
-弗赖翁 8，1010 维也纳
-
-V 11/2022-4
-
-法令发至：
-
-**联邦社会事务，卫生部，护理和消费者保护部部长**
-
-Stubring 1
-
-1010 维也纳
-
-在上述法令审查程序中，根据 宪法法院法（VFGG） 第 5 20 条第 3 款， 也是为了准备可能的口头听证会 – 要求在 2022 年 2 月 18 日之前提供以下信息：
-
-1. 在根据 COVID-19-措施法（COVID-19-MG） 发布的法令文件中，特别提到了因新冠病症入住普通或重症监护病房以及死亡的人数。 引用2021 年 10 月 11 日《新闻》日报报道（“接种过疫苗的人也住院：疫苗有效吗？”）为例子，根据官方信息“如果患者因肾功能衰竭住进重症监护室，并且偶然因新冠病毒检测结果呈阳性”，则将其归为 “新冠病例”。
+##### 字幕 – 老虎尾巴、星星
+视频 – 文宝宝、星星、Cute panda
+翻译/校对 – 小王子、文仁
 
 
-因此，宪法法院要求提供信息，法令文件中给出的住院或死亡人数是否包括所有在医院被安置在普通或重症监护病房中的新冠病毒感染者，无论是直接死于新冠病毒还是带着新冠病毒而死的人。 如果是，为什么选择这种计算方式？此外，宪法法院要求—如有必要—按以下方式对这些数字进行分类:
 
--新冠病毒直接导致病人死亡，病人带着新冠病症而死亡和病人生前无新冠病毒感染症状。
 
--病人因新冠病症住进重症监护室，病人因其它病症住进重症监护室，但同时也伴有新冠病毒症状，以及最后病人因其它病症住进重症监护室且感染了新冠病毒（无症状或轻度病症不需要住院）。
+![](https://assets.gnews.org/wp-content/uploads/2022/01/logo77Gnews.004-2.png)
 
-— 因新冠病症而在普通病房住院的人，因其它病症而在普通病房住院，但也感染了新冠病毒的人，以及因其它病症在普通病房住院且（无症状或病症轻微本身不需要住院）感染了新冠病毒的人。
 
-宪法法院试图提供各自的数字，一方面是总数（按年龄组划分），另一方面是2022年1月25日的数字。
+### 77国际功成农场
+正义小sarah
 
-2. 因新冠病毒在普通病房和重症监护病房住院的人以及因新冠病毒死亡的人年龄的平均值和中位数分别是多少？
 
-3.1. 按年龄组和性别划分，每10万个疾病病例的死亡人数分别是多少？按年龄组和性别划分，每10万个疾病病例中在普通或重症监护病房住院的人数分别是多少？
 
-3.2. 按年龄组和性别划分，每10万名感染者的死亡人数分别是多少？按年龄组和性别划分，每10万名感染者在普通或重症监护病房住院的人数分别是多少？
+大家好，我是正义小Sarah，来自77国际功成农场，我们致力于为所有G系列工程师服务。我们欢迎所有战友、新中国联邦和世界各地热爱和平的人们。我们将一起打倒中国共产党，确保新中国联邦的未来。
 
-3.3 按年龄组和性别划分，每10万名居民的死亡人数分别是多少？按年龄组和性别划分，每10万名居民中在普通或重症监护病房住院的人数分别是多少？
+Hello everyone, my name is Sarah from Himalaya G-Engineers farm. We are committed to serving all G-series engineers. We welcome all members of the whistleblower’s movements, the New Federal State of China and the peace loving people around the world. Together we will take down the CCP and ensure a bright future for the New Federal State of China.
 
-4. 在2022年1月1日，2022年1月25日和（回答此问题时）当日的感染者、住院者和死亡者中存在哪些病毒变种，其比例各占多少？
 
-5.  在生活方面（比如家庭、工作、购物（基本日用品、其他商品）、各种休闲活动）发生感染，其对应的比例是多少？
+![](https://assets.gnews.org/wp-content/uploads/2022/01/logo77Gnews.004-2.png)
 
-6. 在室内或着室外佩戴FFP2口罩会以什么因素降低病毒感染或传染的风险？
 
-7. 疫苗接种率（按照接种第一、第二和第三剂细分）在各年龄组中是如何分布的？
+### 77国际功成农场
+小王子
 
-7.1. 关于欧米克隆（Omikron）感染，下面四组人群中平均7天发病率是多少：2022年1月未接种新冠病毒疫苗的人；接种了第二剂、但尚在接种后14天内的人；已完成“基本免疫” （尚未接种第三剂“加强针”）的人；已接种加强针的人？
 
-7.2. 接种新冠病毒疫苗后减少发展为重症的几率为多少？媒体的说法是可达95%。目前，总体（不分年龄和健康状况）死于新冠病毒的风险（参照流行病学报告系统数据（AGES-Dashboard））似乎为0.1516%。95%的疫苗接种有效率指的是什么？在这种情况下，绝对和相对风险降低又指什么？
 
-7.3. 接种第一、第二和第三剂疫苗能在多大程度上降低因感染新冠病毒在普通病房或重症监护室住院的风险、或因感染新冠病毒死亡的风险？这一程度是否取决于（流行的）变种病毒？
+大家好，我是小王子，在77国际功成农场，我们致力于为给工程师创造一个包容性的安全环境，使他们能够专注于他们的重要工作，不受干扰。我们希望确保工程师们能够成为最好的自己。我们理解你的激情，我们崇拜你的才华。加入我们，分享G系列成功的喜悦，品尝我们不可逆转胜利的甜蜜。
 
-7.4. 据媒体报道，新冠病毒疫苗的保护作用会随着时间的推移而减弱。 这是真的吗？那么在接种第二剂最常用疫苗后的三个月、六个月和九个月以后，这一保护系数有多高？请说明每种情况下的绝对和相对风险的降低。
+Hello everyone, my name is Prince. Here at G-Engineers we committed to creating an inclusive safe harbor for our engineers, so they can focus on their important work and be free from distractions. We want to ensure that our engineers can be the best version of themselves. We understand your passions and we adore your talent. Join us to share the joy of G-series’ success and taste the sweetness of our inevitable victory
 
-7.5. 在直接因新冠病毒导致住院和因其它病症导致住院，但同时携带新冠病毒的人中，接种第一、第二和第三剂疫苗的人各占多少？
 
-7.6. 接种了新冠病毒疫苗的人也可能感染SARS-CoV-2、罹患新冠病毒症并传播SARS-CoV-2。这似乎与当前的科学状况相符。接种新冠病毒疫苗能在多大程度上降低感染、患病和传播的风险？如果这些取决于接种疫苗的数量和/或自上一次接种疫苗以来的时间，请提供详细的数据。
+![](https://assets.gnews.org/wp-content/uploads/2022/01/Japan-fangzhou.jpg)
 
-8.1. 在新冠病毒(§2第2段第3项，COVID-19-SchuMaV经BGBI.I|24/2022修订) 分子生物学测试呈阴性后，排除被测者在检测后72小时内将新冠病毒传染给其他人的概率有多少？考虑到潜伏期：检测（阴性）后多久可以排除（最高概率）这名阴性被测者可传播新冠病毒？
 
-8.2. 在三个月，六个月或八个月前接种第二次疫苗后的新冠病毒感染者，与未接种疫苗、24小时前PCR检测结果呈阴性的人相比，他的传播风险有多高？
+### 日本方舟农场
+草根小哥
 
-9.1.  一个未接种疫苗的25岁的人在一年内因新冠病毒住院（普通病房或重症监护室）的风险有多高？
 
-9.2.  一个25岁的人，两次接种奥地利最常用的疫苗后，在第三、第六和第九个月因新冠病毒住院（普通病房或重症监护室）的风险，平均在一年内有多高？
 
-9.3.  一个未接种疫苗的65岁老人在一年内因新冠病毒住院（普通病房或重症监护室）的风险有多高？
+77功成农场的所有兄弟姐妹们，工程师们，大家新年好！感谢各位过去一年的辛苦劳作！在新的一年里我祝愿各位身体健康！这样的话你们就可以成为这个世界上最健康，最多金，同时也是最有才的人！你们将会是这个时代的翘楚！
 
-9.4. 一个65岁的老人，在两次接种奥地利最常用的疫苗后在第三、第六和第九个月，因新冠病毒住院（普通病房或重症监护室）的风险，平均在一年内有多高？
+Dear brothers and sisters and all the engineers from Himalaya G-Engineers farm, I wish you Happy New Year! Thank you all for your hard work in the past year! In this new year I wish you all good health! So that you can be the healthiest, the richest, and the most talented people in the world! You will be the envy of this generation!
 
-9.5.1. 所谓的“对未接种疫苗者的封锁 ”并不能排除例如在家庭或工作中的感染，但是或许能避免在宾馆中的感染。参照感染风险在生活领域的归类（上面第5点）： “对未接种疫苗者的封锁 ”会使未接种疫苗者的感染风险降低多少个百分点（基数为：没有 “对未接种疫苗者的封锁 ”的感染风险=100）？
 
-9.5.2. 除其它外， “对未接种疫苗者的封锁” 可能是基于以下考虑：未接种新冠病毒疫苗的人比接种疫苗的人的住院风险更高，这可能会给卫生系统带来更大的风险。现在，住院的风险也可能在很大程度上取决于年龄，疫苗接种率可能因年龄组而异。无论如何，所有年龄组的“第二剂疫苗”接种覆盖率应该在75%左右，感染的发生率也可能在不同的生活领域有不同的分布，据此，对未接种疫苗者的“封锁”可能只排除了他们的某些感染源。考虑到这些参数以及第二剂疫苗接种降低风险的程度： “对未接种疫苗者的封锁”对医院负担的影响百分比是多少？
 
-或者在绝对数量上，AGES仪表板显示: 2022年1月24日，普通病房有1049名新冠病毒患者，重症监护病房有194名新冠病毒患者。如果没有 “对未接种疫苗者的封锁”，那普通病房或重症监护病房的床位占用率预期会提高多少？
 
-《标准日报》在2021年12月2日以 “新冠病毒受害者比去年秋天少，但死亡率超高 ”为题进行了报道。
+![](https://assets.gnews.org/wp-content/uploads/2022/01/1200px-GTV_Media_Group_logo.svg_.png)
 
-与前一年相比，患新冠病毒的死亡人数减少了三分之一，但同时每周的超常死亡率却达到三位数，这是真的吗？
 
-如果是这样，2021年人们并非死于冠状病毒的总超常死亡率有多高? 这种超常死亡率如何解释?
+### GTV – CTO 
+杖子小哥
 
-2022.01.26 维也纳
 
-宪法法院
 
-Dr. Hauer
+在这辞旧迎新之际，我代表日本GTV工程师团队，给大家拜年了！祝福郭先生和全球战友及家人平安健康，虎年大吉！祝福G系列工程师团队虎气冲天！ 我们一定不负众望，把GTV 做好！
 
-发送至:
+On behalf of the GTV Japan team of engineers, I would like to wish you all a Happy New Year! I wish Mr. Guo and his global supporters and their families a safe and healthy New Year of the Tiger! I wish the G-Series engineer team a great year of the Tiger! We will definitely live up to the expectations of everyone and make GTV a success!
 
-联邦社会事务、卫生、护理和消费者保障部长 Stubenring 1
 
-Unterzeichner 签名
+![](https://assets.gnews.org/wp-content/uploads/2022/01/logo77Gnews.004-2.png)
 
-Darum/Zeit 日期/时间
 
-Aussteller Zertifikat 签证人证书
+### 77国际功成农场
+小王子，佳佳
 
-本文件已经正式签署
 
-关于验证电子印章或电子签名的信息可以在以下网站找到。
 
-原文：
-![](https://assets.gnews.org/wp-content/uploads/2022/01/IMAGE-2022-01-29-235855.jpeg)![](https://assets.gnews.org/wp-content/uploads/2022/01/IMAGE-2022-01-30-001512.jpeg)![](https://assets.gnews.org/wp-content/uploads/2022/01/IMAGE-2022-01-30-095424.jpeg)![](https://assets.gnews.org/wp-content/uploads/2022/01/IMAGE-2022-01-30-095430.jpeg)![](https://assets.gnews.org/wp-content/uploads/2022/01/IMAGE-2022-01-30-095434.jpeg)
-校对：英喜德语组 Luckycky，貓聲，Wistaria，Nena，澜磬筱竺/ 审核：貓聲，Charles / 发布：Luckycky
-![](https://assets.gnews.org/wp-content/uploads/2021/09/战鹰团新logo2021-07-01-1.jpg)
+尊敬的战友们好，我是小王子，我是佳佳。
+
+在2022年新春佳节之际，我在此真心祝各位战友们，生体健康，万事如意。远离病毒，远离疫苗，一定生活甜蜜蜜。
+
+共产党你玩球蛋了。 Take down the CCP！
+
+Dear brothers and sisters in arms, I am Prince, I am Evelyn.
+
+In the occasion of the Chinese New Year 2022, we would like to sincerely wish all my brothers and sisters in arms, a healthy life and only the best. Free of viruses, free of vaccines, and to undoubtedly live a life ‘as sweet as honey’.
+
+CCP, you’re done for. Take down the CCP!
+
+
+
+
+![](https://assets.gnews.org/wp-content/uploads/2022/01/gettr-1.png)
+
+
+### Gettr – CEO
+Jason Miller
+
+
+
+大家好，我是盖特CEO Jason Miller，祝大家新年快乐！我们现在马上就要进入虎年了。我认为老虎完美的代表了盖特作为一个自由媒体平台的勇气，自信，与骄傲。我们是一个自由的平台，我们与所有努力消灭中共的先生们和女士们站在一起！我们与新疆维吾尔族人站在一起！我们与西藏人站在一起！我们更是与在香港前线勇敢奋战的学生勇士们站在一起！我们会把盖特带到月球！我们会携手并且作战，消灭中共！今年，我们就是老虎！我们是胜利的平台！我非常荣幸和激动能够和大家一起踏上我们的使命！
+
+Hi everybody this is GETTR CEO Jason Miller wishing you a very happy Chinese New Year.We are now entering the year of the tiger.I can think of no better description than the tiger that represents the courage, the self-confidence, the self-esteem that we have as a platform of free speech.We are the platform of freedom, we stand with the hard-working men and women who face up against the CCP oppression.We stand with the Uyghurs.We stand with the people of Tibet.We stand with the students who are in Hong Kong valiantly making their voices heard.We are gonna take GETTR to the moon.We are going to take down the CCP.We are the tiger.This is the platform for victory and I am so excited to be on this mission with you!
+
+
+![](https://assets.gnews.org/wp-content/uploads/2022/01/gettr-1.png)
+
+
+### Gettr – CTO
+Ken
+
+
+
+Hi 大家好，我是在盖特的KEN，去年我们同舟共济，兢兢业业，新的一年我们要再接再厉，所谓忘过去展未来，2022年是个新起点，在这我代表盖特的科技部门，工程师团队向七哥大家拜年祈福，希望2022年灿烂辉煌，互转乾坤行大运，合家幸福，岁岁平安，虎年旺旺来～
+
+Hello everyone, I’m Ken from Gettr. Last year we were all in the same boat, working diligently, in the new year we have to continue to work hard, the so-called forgetting the past to discover the future, the year of 2022 is a new starting point, on behalf of Gettr’s technology department, the team of engineers wish Miles Guo and everyone a happy new year, hopefully 2022 will be splendid and brilliant, turning the wheel of fortune, happy family, peace and prosperity in the Year of the Tiger~
+
+
+![](https://assets.gnews.org/wp-content/uploads/2022/01/logo77Gnews.004-2.png)
+
+
+### 77国际功成农场
+文随riki
+
+
+
+郭先生好！全世界各地的战友们好！我是文随，来自77国际功成农场, 也在全球G系列咨服群做志愿者。
+
+祝大家新年快乐！远离病毒， 也远离疫苗，早日灭掉共产党！
+
+Hello Mr. Guo and all the supporters around the world! I’m Wen Sui, from Himalaya 77 G-Engineers Farm, and I also volunteer in the Global G-Series Advisory Service Group.
+
+Happy New Year to all of you! Stay away from viruses and vaccines, and let’s take down the CCP soon!
+
+
+![](https://assets.gnews.org/wp-content/uploads/2022/01/Screen-Shot-2022-01-30-at-12.38.32.png)
+
+
+### G|FASHION – CEO & Co-founder
+Kamel & Doaa
+
+
+
+大家好，我们代表G-fashion，祝愿你们在未来的一年里能一切顺利。感谢你们对G-fashion的支持，使它成为一个非常成功和高贵的品牌。谢谢大家。
+
+谢谢你。非常感谢你们，并再次祝大家新年快乐!  大家多保重，再见。
+
+Hello everyone, we wish you the best year to come. Thank you for making G fashion a successful luxury brand. Thank you. Thank you so much and happy new year again! Take care, bye.
+
+
+![](https://assets.gnews.org/wp-content/uploads/2022/01/logo77Gnews.004-2.png)
+
+
+### 77国际功成农场
+Cute panda
+
+
+
+感恩上天，我们的是最有福报的人，能追随郭叔做人生中最有意义的灭共使命。在新的一年祝郭叔全家，还有全世界的战友虎年生体健康，万事如意， 虎年行大运。大家一起努力为了达到我们共同的目标。
+
+We are so grateful to be the most blessed people to follow Mr. Guo to do the most meaningful mission in our life, that is to take down the CCP!
+
+In the new year, we wish Mr. Guo and his family and all our comrades around the world to have a healthy and prosperous life in the Year of the Tiger, and we will work together to achieve our common goal!
+
+* * *
+
+**77国际功成农场**
+
+**2022 新春贺岁片 **
+
+**Himalaya International 77 G|Engineers Farm**
+
+**2022 Chinese New Year Special Film**
+
+**77国际功成农场**
+
+**出品**
+
+**Produced By**
+
+**Himalaya International 77 G|Engineers Farm **
+
+**导演 **
+
+**Executive Directors**
+
+**正义小Sarah (Sarah)**
+
+**小王子 (Prince）**
+
+**策划与文案 **
+
+**Planning & Copyediting**
+
+**Lakeman 文仁**
+
+**Cute Panda**
+
+**旗风 (QiFeng)**
+
+**特邀嘉宾**
+
+** Special Guests **
+
+**GTV CTO**
+
+**杖子小哥 (Kirby）**
+
+**GTV Director**
+
+**草根小哥 (Sean)**
+
+**GETTR CTO**
+
+**Ken**
+
+**G｜FASHION President & CEO**
+
+**Doaa Dashoush **
+
+**G｜FASHION Co-Founder**
+
+**Kamel Debeche**
+
+**  出镜战友：**
+
+**Cast Members: **
+
+**正义小Sarah (Sarah)**
+
+**小王子 (Prince)**
+
+**佳佳 (Evelyn)**
+
+**文随riki (Riki)**
+
+**Cute Panda**
+
+**视频监制 **
+
+**Video Producer**
+
+**Cute Panda**
+
+**字幕 **
+
+**Caption****
+****老虎尾巴 (TigerTail)**
+
+**星星 (XingXing)****
+**** **
+
+** 视频制作 **
+
+**Video Editors**
+
+**文宝宝 (WenBaoBao)****
+****星星 (XingXing)****
+****Cute panda**
+
+**感谢观看，77国际功成农场祝您新春快乐！**
+
+**Thank you for watching! **
+
+**We wish you a very happy Chinese New Year!**
+
+编辑/上传 大废墙（文非）
+
+* * *
+
+[77国际功成农场 on GTV](https://gtv.org/user/618f6773e7e7703792344ce6#home)
+[77国际功成农场 Himalaya G|Engineers on Gettr](https://gettr.com/user/himalaya77tech)
+![](https://assets.gnews.org/wp-content/uploads/2022/01/banner-gnews77.010.png)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
