--- a/gnews/55.md
+++ b/gnews/55.md
@@ -1,43 +1,54 @@
 ---
-title: 因提供对维吾尔人的监控 北京奥运会“人工智能冠军”翻译供应商被制裁
+title: 盖特CEO Jason Miller 送给战友和中国人民的新春祝福
 ---
-`喜马拉雅农场新西兰站` [轉載自GNews](https://gnews.org/zh-hans/1927328/)
+`Himalaya 77 G-Engineers` [轉載自GNews](https://gnews.org/zh-hans/1931115/)
 
-作者：Jerry Dunleavy
-发布日期：2022年1月28日
-新闻来源：华盛顿检查官（Washington Examiner )
-翻译：V 在途中
+##### 字幕 – 老虎尾巴、星星
+视频 – 文宝宝、星星、Cute panda
+翻译/校对 – 小王子、文仁
 
-![](https://assets.gnews.org/wp-content/uploads/2022/01/iFLYTEK-Asia-AI-Leader-Debuts-Cutting-Edge-Voice-Technologies-in-the-US-696x392-1.jpg)
 
-北京奥运会官方翻译服务提供商因帮助中共监视维吾尔穆斯林而被美国列入黑名单。
-这家名为 iFlytek 的语音识别公司长期协助中国安全部门在新疆和其他地方提供技术监控，2019年9月被指定为“北京2022年官方自动翻译软件独家供应商” 。美国称中共正在对维吾尔人进行种族灭绝，美国商务部在 2019 年 10 月表示，科大讯飞是被列入美国黑名单的 20 多个中国实体公司之一，称科大讯飞“在实施中共国的镇压、大规模任意拘留和针对维吾尔人、哈萨克人和其他穆斯林少数群体成员提供了技术监控。”
 
-科大讯飞的创始人兼首席执行官刘庆峰也是中共的橡皮图章全国立法机关全国人大代表。2021年，科大讯飞为东京奥运会提供了翻译服务，在9月份的新闻稿中暗示了其在北京冬奥会的计划。该公司长期以来得到中共国家的支持和政府的认可。公司于2018年被科技部评为全国“人工智能冠军”。
+Hi everybody this is GETTR CEO Jason Miller wishing you a very happy Chinese New Year.
+大家好，我是盖特CEO Jason Miller，祝大家新年快乐！
 
-一家中国媒体在 2014 年报道称，科大讯飞“表示使用大数据技术打击恐怖主义已成为国际趋势”，讯飞公司可以提供帮助。科大讯飞智慧城市事业群公安部营销总监傅立亭告诉中共运营的《中国日报》，“我们通过应用我们的人工智能与警方合作。” 他告诉媒体，该公司自 2015 年以来一直在中国安徽和上海等城市与警方合作，“我们已经开始将应用程序扩展到 10 多个省的公安部门。” 傅指出科大讯飞的人工智能机器人“警察助手”，并表示该公司希望其设备在200个城市被警察使用。
+We are now entering the year of the tiger.
+我们现在马上就要进入虎年了。
 
-人权观察在 2017 年表示，科大讯飞表示已帮助中国公安部建立了国家语音模式数据库，并成立了人工智能语音技术部级实验室，以在新疆和西藏“破案”。监管机构表示，该公司“也是新疆和安徽公安局采购的声纹采集系统的指定供应商”。
+I can think of no better description than the tiger that represents the courage, the self-confidence, the self-esteem that we have as a platform of free speech.
+我认为老虎完美的代表了盖特作为一个自由媒体平台的勇气，自信，与骄傲。
 
-该翻译提供商与中国移动、中国电信和中国联通合作多年，而这些电讯公司都已被美国列入黑名单，中国联通北京也是奥运会的独家供应商。
+We are the platform of freedom, we stand with the hard-working men and women who face up against the CCP oppression.
+我们是一个自由的平台，我们与所有努力消灭中共的先生们和女士们站在一起！
 
-美国国家人工智能安全委员会在 2021 年表示，科大讯飞等“国家冠军”公司帮助“引领国内人工智能技术的发展”，并“推进国家主导的优先事项，为军事和安全计划提供支持”，有大量证据表明科大讯飞帮助参与中国当局的追捕行动。
+We stand with the Uyghurs.
+我们与新疆维吾尔族人站在一起！
 
-据报道，科大讯飞的创始人兼首席执行官刘庆峰也是中共的橡皮图章全国立法机关全国人大代表。刘晓波回应美国黑名单时说：“没有任何力量可以阻挡我们用人工智能建设美丽世界的信心和步伐！” 他还发誓“我们不会被勒死”。
+We stand with the people of Tibet.
+我们与西藏人站在一起！
 
-讯飞其业务在 2020 年增长了 66%。在 2020 年对中国国营《环球时报》表示，黑名单并没有放慢速度，并吹捧他与华为的合作伙伴关系。
+We stand with the students who are in Hong Kong valiantly making their voices heard.
+我们更是与在香港前线勇敢奋战的学生勇士们站在一起！
 
-华为分享的 2018 年杂志文章 断言，“科大讯飞和华为已形成战略合作伙伴关系，以开发语音和人工智能技术的实际应用。”
+We are gonna take GETTR to the moon.
+我们会把盖特带到月球！
 
-《华盛顿邮报》去年 12 月 透露，作为协助中国当局为“国家安全”目的分析声音的宣传的一部分，华为制作了幻灯片显示“科大讯飞声纹管理平台”（由华为和科大讯飞共同开发）可以识别个人通过庞大的“声纹”数据库。
+We are going to take down the CCP.
+我们会携手并且作战，消灭中共！
 
-美国国会中国执行委员会在 2019 年表示，“中国安全当局继续与包括科大讯飞在内的国内公司合作，以扩大政府监控系统的覆盖范围和分析能力”。该公司参加奥运会是美国和国际运动员可能被迫使用与中共镇压有关的技术和产品的又一个例子，科大讯飞也可能被用来监视奥运会参与者和与会者。
+We are the tiger.
+今年，我们就是老虎！
 
-[新闻链接](https://www.washingtonexaminer.com/policy/foreign/beijing-olympics-translation-provider-is-ccp-ai-champion-sanctioned-for-uyghur-surveillance)
+This is the platform for victory and I am so excited to be on this mission with you!
+我们是胜利的平台！我非常荣幸和激动能够和大家一起踏上我们的使命！
 
-审核校对：Barry Jack
-上传排版：V在途中
+编辑/上传 大废墙（文非）
 
+* * *
+
+[77国际功成农场 on GTV](https://gtv.org/user/618f6773e7e7703792344ce6#home)
+[77国际功成农场 Himalaya G|Engineers on Gettr](https://gettr.com/user/himalaya77tech)
+![](https://assets.gnews.org/wp-content/uploads/2022/01/banner-gnews77.010.png)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
