--- a/gnews/57.md
+++ b/gnews/57.md
@@ -1,177 +1,41 @@
 ---
-title: 中共国希望将美国文化女性化以进行控制
+title: GTV是王！喜联储拒绝5000亿美元现金投资拿5%-10%股份提议
 ---
-`洛杉矶盘古农场 HIMALAYA LA PANGU` [轉載自GNews](https://gnews.org/zh-hans/1879630/)
+`YALUN 亚伦` [轉載自GNews](https://gnews.org/zh-hans/1930423/)
 
-**Steve Bannon
-史蒂夫·班农**
+新西兰伊甸农场Gnews组 财经G乐部-亚伦
 
-Ken Blackwell, I want to go back this about this central issue of masculinity
-肯·布莱克威尔, 我想回到这个关于男子阳刚之气的核心问题
+1月27日，郭文贵先生于GTV、Gettr大直播中再度强调GTV是王牌中的王牌，并表示，由GTV控股5%的喜联储拒绝了某国用5000亿美元现金拿5%-10%股份的提议。
+![](https://assets.gnews.org/wp-content/uploads/2022/01/912e45540628f19be191db0c946dc20c11.jpg)图片来源Gettr
 
-and trying to de masculinity this whole attack on males overall
-当试图去男性化对男性整体进行攻击
 
-but particularly on black men
-但尤其是对男性黑人
+GTV是王，亦是撬动地球的支点。
 
-Walk us through what that attack is
-引导我们了解攻击的是什么
+GTV作为唯一一个中国人可以真正自由发声的视频平台，为完成灭共的使命而诞生，具备独到的在线直播功能，敢于在新冠病毒危机、新冠毒疫苗危机中坚持传播真相。不但如此，GTV未来还将支持Hpay、Gettrpay打赏, 以及部署合法的网上赌博、游戏、娱乐板块。
 
-and how does that translate to the practical politics
-以及这如何转化为实际的政治
+倚靠强大的搜索功能、AI科技，做到精准的信息分类加定点推送，GTV必将成为世界的情报市场、信息交易市场。
 
-we need to basically destroy root and branch the Democratic Party in November this year
-我们需要在今年11月基本击败民主党
+尤其是去媒体中心化数字货币“躺平币”的即将问世，更是将GTV推向一个新的高度。真正做到使用即赚钱，使用即获得“躺平币”。用GTV记录点滴生活或者传播爆料革命的信息，GTV的留言、点赞、在线观看等所有的活动都会被系统量化记录，都将按标准换取“躺平币”。
 
-Ken Blackwell (Commentator, Former Ohio State Treasurer)
-肯·布莱克威尔（评论员，前俄亥俄州财政部长）
+甚至， GTV直播中任何有价值的信息也可以NFT化，这意味着把定价权数字化，打破政府强制使用法币衡量的定价权。
+![](https://assets.gnews.org/wp-content/uploads/2022/01/西班牙巴塞罗那喜悦农场-3.png)图片来源Gettr
 
-Steve, It really did start at an accelerated pace with the Great Society Program
-史蒂夫，它确实从大社会主义计划开始加速
 
-when in fact they created an incentive system to break up the family
-事实上，他们创造了一个激励系统来打破家庭
+不但如此，GTV未来还是G系列的控股集团，好比中共的中投公司，或者台湾的中信集团。GTV 的控股公司拥有5%的Gettr股份、5%的Gclubs股份、5%的Gfashion股份、10%的Gmusic股份和5%的喜联储股份（还有参股其他新增G系列的潜力）。需要着重强调的是，这里5%的喜联储股份是包括发行一百年、总共发行1000亿个Hcoin（喜币）价值的5%（亦是新中国联邦铸币权的5%）。
 
-and to drive unemployed a low wage of black males out of the family
-以及将低工资的黑人男性赶出家庭
+据悉，之前某个国家跟喜联储谈判时，提议用大约5000亿美元现金换取喜联储5%-10%股份，但是被郭先生果断拒绝了。原因是当今年Hcoin（喜币）单位价值过百的时候，对方的5000亿美元就变1万亿美元。假设这5000亿美元现金进入到喜联储，乘以50倍的一般市场反应价值，喜联储的市值瞬间爆发到25万亿美元以上。
 
-they created a penalty box for intact families
-他们为完整的家庭创造了惩罚箱
+可预期的爆发，所以作为控股公司的GTV股票价值几何将无法想象。
 
-1960s there were many intact black families as my family
-1960年代有许多完整的黑人家庭就像我的家庭
+**相关****Gnews文章：**
 
-The Great Society Program accelerated the attack on the black on the black males
-大社会计划主义加速了对黑人男性的攻击
+“躺平币”是向中共讨债的工具，解放更多的灭共力量
 
-We were experiencing that
-我们正在经历这种情况
 
-I’ll just go to TikTok, the feminization of America
-我用抖音举例，美国的女性化
 
-and America America’s family unit which is not a family unit
-而美国的家庭单位，它不是一个家庭单位
+> [“躺平币”是向中共讨债的工具，解放更多的灭共力量](https://gnews.org/zh-hans/1737197/)
 
-‘cause Marxism so big government socialist, they all destroyed the family
-因为马克思主义这么大的政府社会主义者，他们摧毁了家庭
 
-because they want to create a dependency on the government
-因为他们想建立人们对政府的依赖
-
-They want you on the tip of big government so they can control you
-他们想让你站在大政府的施舍上，这样他们就可以控制你
-
-They’ll move you from being a free citizen to being a subject
-他们会让你从一个自由公民变成一个臣民
-
-Now what black males have experience it’s that they in fact around in reality
-现在黑人男性在现实中的经历可以追溯到
-
-and they see that the left is one pushing a feminization of our community and our America
-他们看到左派正在推动我们社区和美国的女性化
-
-And they are in fact, continuing to zero in on males
-事实上，他们正在继续对男性进行调查
-
-the Chinese Communist Party along with big government marches in general
-中国共产党和大政府普遍推行
-
-which it’s Putin in Russia
-就是在俄罗斯的普京
-
-they understand that they can feminineness the American culture
-他们明白他们可以使美国文化女性化
-
-they in fact, they gain an advantage on the battlefield
-事实上，他们在战场上获得了优势
-
-What we have to do is to understand that black males are ready to speak up
-我们要做的是了解黑人男性已经准备好发声
-
-Our get to do is to go to Chicago and they are tired of this mess
-我们要做的就是去芝加哥，他们厌倦了这个烂摊子
-
-And in fact, we need to say, look, we have an agenda for freedom
-事实上，我们需要说，看，我们有一个自由议程
-
-We have an agenda for self sufficiency
-我们有一个自给自足的议程
-
-We have an agenda that respects your human agency and your human dignity
-我们有一个尊重你的人的能动性和你的人格尊严的议程
-
-and we can begin to move not in next two years, not in four years
-我们可以开始行动，不是两年后，不是四年后
-
-but this year in this election, we can change things in the margin
-而是在今年这次选举，我们可以在很大程度上改变一些事情
-
-you get black males voting for MAGA candidates
-让黑人男性投票给使美国再次伟大的候选人
-
-who in fact, respect human dignity, respect the family, respect work, and respect freedom
-事实上，是尊重人的尊严，尊重家庭，尊重工作，尊重自由的候选人
-
-you in fact, we’ll win elections for the next 50 or 100 year
-事实上，我们将赢得未来 50 或 100 年的选举
-
-Steve Bannon
-史蒂夫·班农
-
-Ken, how do people get you on social media? How do you get your website?
-肯，人们如何在社交媒体上找到你？ 如何得到你的网站？
-
-Ken Blackwell
-肯·布莱克威尔
-
-Kenblackwell.com, @kenblackwell on Gettr, and twitter
-Kenblackwell.com, @kenblackwell在盖特和推特
-
-I’m deemphasizing on Twitter
-我正在淡化推特
-
-And we’re growing like gangbusters on Gettr
-而且我们在盖特上的发展势头迅猛
-
-Steve Bannon
-史蒂夫·班农
-
-Ken, honor to have you on here. Sir, thank you
-肯，很荣幸有请你在这里， 先生，谢谢你
-
-Ken Blackwell
-肯·布莱克威尔
-
-Good be with you
-高兴和你一起
-
-Steve Bannon
-史蒂夫·班农
-
-Thanks, brother
-谢谢， 兄弟
-
-* * *
-
-Date:01/18/2022
-原视频标题: China Wants To Feminize The Culture Of America For Control
-中共国希望将美国文化女性化以进行控制
-原视频日期：2022/01/18
-原视频链接: [**https://rumble.com/vsrm97-china-wants-to-feminize-the-culture-of-america-for-control.html**](https://rumble.com/vsrm97-china-wants-to-feminize-the-culture-of-america-for-control.html)
-任务编号：KE356(3526)
-视频时间段 : 0:00-3:29
-英听校：洛杉矶盘古农场 – Layka
-翻译：洛杉矶盘古农场 – Layka
-翻译终校：洛杉矶盘古农场 – Mike Li
-字幕+视频制作：洛杉矶盘古农场 – 天涯行
-审片：洛杉矶盘古农场 – 银龙
-发布：洛杉矶盘古农场 – 恩典
-[![](https://assets.gnews.org/wp-content/uploads/2021/03/WhatsApp-Image-2021-06-26-at-22.05.30.jpeg)](https://discord.gg/2vuvRm7z6U)
-洛杉矶盘古农场欢迎您加入:(或点击上方图片）
-
-[https://discord.gg/2vuvRm7z6U](https://discord.gg/2vuvRm7z6U)
 
  
 
