--- a/gnews/6.md
+++ b/gnews/6.md
@@ -1,21 +1,31 @@
 ---
-title: NewSGman┃疫情新闻全球最新速报（1月31日）
+title: 被抛弃的跨境生
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1937114/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1937145/)
 
-撰稿：东京樱花团/NewSGman
+作者：东京樱花团丨阿恩
+![](https://assets.gnews.org/wp-content/uploads/2022/01/unnamed-18.jpg)
+中共灭绝人性的一胎政策，杀死了数亿计的胎儿，近十年中国人手头上开始有了点钱，生育的天性就无法再阻挡，为躲避中共地方政府严苛的计生管制，经济条件充裕的，能远赴欧美国家生育，大部分人则选择到一步之遥的香港生育，这些国家和地区对在当地出生的婴孩给予公民或居民的身份。
 
-加拿大卡车司机车队反对加拿大政府对跨境物流活动的疫苗强制政策抗议活动愈演愈烈。
+在曾荫权任特首期间，对内地人来港生育持开放的态度，这些内地孕妇为香港私立医院带来巨额的收入，并衍生出相关的中介公司，能提供全套的生育安排，价格起步就要十万港币。虽然价格不菲，但孩子可以取得香港永久居留权，可享受免费教育、廉价医疗、综援等各种福利。据悉不少陪读的内地家长成功为港籍的孩子向港府申请综合**社会保障**援助，每月都可获得数千港元的补贴，大大减轻了在香港的生活压力。最重要的是家长们希望孩子能接受到中西结合的教育，能助孩子早日与国际接轨。如此多的好处，吸引了大量的家庭到香港生育，有的甚至在香港连续生育两胎以上。
 
-加拿大首都渥太华5万名卡车司机抗议车队可能会打破最长车吉尼斯世界纪录。
+不幸的是，这些骤增的“双非儿童”虽然养肥了私立医院和中介，却严重影响了香港本地孩童的资源的分配。香港教育界推行的小班教育几乎被击毁，大量的新生涌入幼稚园，出现史无前例的超额收生情况，导致课室拥挤流行病肆虐，教师和员工疲惫不堪，但问题持续得不到香港政府的有效解决。许多幼稚园的新生介绍日十分夸张地聚集了大量递交入学申请表的内地家长，吓得本地家长要为孩子入学跑断腿。有本地家长抱怨孩子的入学申请被楼下的幼稚园因学位紧张而拒绝，无耐要把送孩子到更远的幼稚园就读，港人对双非儿童的成见倍添。
 
-据路透社消息，加拿大司机卡车车队驶入加拿大首都渥太华，在议会前对总理贾斯汀·特鲁多的 COVID-19疫苗授权进行大规模抗议“自由车队”最初是加拿大卡车司机的集会，反对跨境司机接种疫苗的要求，但后来演变为反对政府在大流行期间过度干预的示威，并带有强烈的反疫苗接种倾向。
+双非儿童引发了中港社会矛盾，梁振英在特首竞选过更将“解决双非儿童的问题”列入政纲，2003年成功继任特首的梁振英迅速下令禁止内地人到香港生育，此举令其获得不少民意。双非孩童生育的浪潮持续了七年，如今该浪潮的前锋已到达中三，我们可以从数据上很明显地看到影响的力度，中四及以上的班级分别只有两至三个班，每班的人数二十五人左右，而中三及以下的班级分别有四个班，每班超过三十人。由于香港的中学大部分是旧式校舍，校园占地面积小，科室有限，尤其是临近深圳的地区，中学的学位严重不足，不少双非儿童由于奔走于深港两地，没有香港的固定地址，统一派位被被列到最后，有人被分到青衣岛，甚至更远的地方。据悉，这些深港两地走的双非学生，每天的交通时间最少都要在三小时以上。
 
-盖特链接：[https://www.gettr.com/post/prlzn688e2](https://www.gettr.com/post/prlzn688e2)
+中共病毒祸害香港，港府封锁陆路口岸近两年，严格的过关检测和隔离政策，导致大部分双非孩童被滞留在深圳上网课，长期无法参与校园生活，性格变得孤僻。有部分家长退租带孩子回内地居住，也有家长申请退学安排孩子入内地学校学习，因为孩子身份的问题，许多家长被学校要求支付额外的费用，加之深港教育体系的差异，中途转校的双非孩子有许多不适应，家长为其寻求辅导班，进一步增加了孩子的压力。
 
-*编辑：东京樱花团/喜马拉雅的微尘
-发布：东京樱花团/平安卿卿*
-![](https://assets.gnews.org/wp-content/uploads/2022/01/%E4%BA%8C%E7%BB%B4%E7%A0%81.jpg)
+这些双非孩童是中共邪恶统治下的牺牲品，他们的母亲为躲避计生政策满怀希望地在香港生下他们，却被中共港府利用成为牟利的工具，被政棍当成政绩炫耀，最后被中共病毒阻挡在关口。这些孩子童真的岁月满是奔波和歧视，香港人的身份曾经是父母的希望，如今却成为拖累。值得庆幸的是，这些父母是最先开智的一群人，他们意识到中共政权的丑恶，用实际行动与之抗争，在香港还是民主自由和法治社会的日子，将孩子出生在个土地上，这些父母保护了孩子出生的权力，这20万条宝贵的生命是未来控诉中共灭绝人性统治最最好的证据。
+
+资料来源：[跨境生内地「借读」情况上升家长忧课程有异未能衔接](https://hk.on.cc/hk/bkn/cnt/news/20220131/bkn-20220131112844636-0131_00822_001.html)
+
+校对：东京樱花团/
+发布：东京樱花团/yuxingcao01
+![](https://assets.gnews.org/wp-content/uploads/2021/12/樱花-3.jpg)
+
+
+
+
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
