--- a/gnews/8.md
+++ b/gnews/8.md
@@ -1,41 +1,53 @@
 ---
-title: 英国考虑在乌克兰危机中部署北约军力
+title: 新疆西藏香港及海内外有良知同胞的参与启动甜蜜蜜运动
 ---
-`西班牙巴塞罗那喜悦农场` [轉載自GNews](https://gnews.org/zh-hans/1937100/)
+`喜马拉雅日本银河系农场` [轉載自GNews](https://gnews.org/zh-hans/1937125/)
 
-**编译：wenwu**
-![](https://assets.gnews.org/wp-content/uploads/2022/01/tempsnip13英国考虑在乌克兰危机中部署北约军力.png)图片来源：reuters.com
-英国政府周六（29日）表示，作为加强欧洲边界计划的一部分——应对俄罗斯在与乌克兰的边境集结军队，英国正在考虑进行大规模的北约部署。
+G-TV视频链接：[https://gtv.org/video/id=61f77e7cd90bdd2085a3007c](https://gtv.org/video/id=61f77e7cd90bdd2085a3007c)
 
-英国表示，俄罗斯对乌克兰的任何入侵都将受到迅速的制裁，对双方都是毁灭性的。
+**郭文贵先生：**就是刚才澄道说到这个英雄的话题，就是想到这一幕一幕的，就是他们在里面，我看到共产党枪毙人、弄死人、虐待人的时候，共产党你一定记住：所有这些人是开心的，这是你们没有想到的另外一面。就是他们虐待人的时候，这些人都是很开心的，包括枪毙人的时候他都很兴奋、很开心的。就是他们在里面就叫秘密执行嘛，不是到刑场执行的，就是把他拉出去就在看守所支起一个大墙外面“咵嚓”铁丝网前面，毙完以后他们都是很兴奋的。
 
-英国首相鲍里斯·约翰逊（Boris Johnson）将于下周访问乌克兰，还将与弗拉基米尔·普京（Vladimir Putin）通电话。
+那种感觉跟你这个医生治病可是两回事，所以说为啥我说Eglise你没有看过邪恶，你是治病救人。这帮人、孙子我是看到他们枪毙人那种兴奋、开心，就像你家杀个羊是要等着吃羊肉一样，杀个鸡等着吃鸡肉一样，就是这帮人。就像Isobel Yeung要吃狗肉一样，是吧！这么看着狗杀掉、剥皮、炖出来、吃了，就是Isobel Yeung的感觉。
 
-约翰逊的办公室说，他正在考虑向北欧（Nordics）和波罗的海（Baltics）地区的北约防务公约成员提供最大的可能，这将使部队人数增加一倍，并向爱沙尼亚（Estonia）发送防御性武器。
+所以为啥我说新中国联邦一定要有信仰。我觉得郝海东先生、叶钊颖女士我们当时跟班农先生那个宣言里面，保护动物这个真的是战友们我觉得太棒了，任何未来咱们新中国联邦人吃狗肉的，绝对不能让你加入新中国联邦，对动物不尊重不能让加入新中国联邦，因为我们看到人对动物有多狠的时候，对人就会有多狠！这个残忍是逐渐培养起来的。
 
-约翰逊在一份声明中说：“这一方案将向克里姆林宫（Kremlin）发出一个明确的信息—我们不会容忍他们破坏稳定的活动，面对俄罗斯的敌意，我们将始终与我们的北约盟友站在一起；我已经命令我们的武装部队准备下周在欧洲各地进行部署，确保我们能够支持我们的北约盟友。”
+对待英雄也好，对待人也好，你们没有感受过那种痛苦，说老实话，真的是有些人也被枪毙的时候，我没那么痛苦，因为他真的就不是什么好人，没那么痛苦啊。
 
-官员们将于下周在布鲁塞尔（Brussels）敲定该提议的细节，部长们将于周一（31日）讨论军事选项。
+就这种英雄，就真的活在我心里边了，你就觉得这个人被带出去虐待成那样回来，喘着就一口气，他完全没有、就一点点放弃、后悔的感觉都没有。
 
-约翰逊办公室表示，在面临做得不够的批评后，他将在下月初第二次出访，会见北约的同行，以加强外交努力。
+你能感觉到这就是你说的那种升华，包括其他的你看那个教士，我觉得真有信仰的人是很伟大的！那教士被打到，那真是浑身血淋淋地回来呀！就是打完以后几个小时，Eglise医生知道，就是粘在血上，就是血不流了，衣服粘在那上边了，穿的内裤粘在那衣服上你知道一拽得多疼啊，Eglise你知道回来是吧，那是很恐怖的！但是你看到他咬着牙、咧着嘴，但是这些人他没有一点儿后悔的，他没有任何恐惧。
 
-英国外交部长和国防部长也都将在未来几天前往莫斯科（Moscow）与俄罗斯同行进行会谈，目的是改善关系和缓和紧张局势。
+这个你真是能看到，我老开玩笑说中国男人不行，绝大多数中国男人还是很行的，特别像有这样的英雄和宗教人士。当你想到这一幕的时候，你觉得新中国联邦当中，你就会觉得我们灭共真的就不仅仅是正义的需要的问题，就是太多语言无法形容的啦。而且我相信在这个香港刚刚发生的事儿，有多少这样的英雄故事，只是你不知道而已，香港没出现一个郭文贵告诉你这些故事。
 
-简评：
+没有人告诉你新疆集中营发生什么事了，因为新疆没出现郭文贵，西藏没出现郭文贵。我们这次的“甜蜜蜜运动”得到了海外的有良知、有能力的新疆、还有西藏、还有香港的同胞们、手足们的巨大的支持，他们是重要的参与者，我们才能把“甜蜜蜜运动”启动起来。现在不能细说，等到“甜蜜蜜运动”发生以后咱们再细说。
 
-根据七哥2022年1月30日的独家[直播](https://gtv.org/video/id=61f6900896ba5d73e0bee910)，欧亚的乌克兰和台湾的战争危机的背后主使是中共（资助俄罗斯攻打乌克兰），而且西方为了转移国内追求疫苗真相的压力与疫苗次声灾难的注意力，很可能让事态走向战争。
+字幕来源：[2022年1月24日郭文贵先生直播全文字版](https://gnews.org/zh-hans/1909538/)
 
-**新闻来源**：[reuters.com] [Britain considering major NATO deployment amid Ukraine crisis](https://www.reuters.com/world/uk/britain-considering-major-nato-deployment-amid-ukraine-crisis-2022-01-29/) |发布时间：2022年01月29日｜
+编辑整理：Jacques；
 
-* * *
+字幕文件制作：知津；
 
-***审核：文乐
-校对：小东
-发布：信心满满***
+视频制作及上传：Cindy；
 
-![](https://assets.gnews.org/wp-content/uploads/2022/01/GNEWS_CH.-1-3-5.jpeg)
+G-News发布：小满；
 
+**广而告之：尊敬的战友，你的每一篇文字、每一段视频、每一段社交媒体发文都是压垮骆驼的一根稻草，欢迎加入我们****——**[**日本银河系农场****Discord****群**](https://discord.com/channels/805765245758472202/851632878567948351)**，欢迎订阅我们的油管频道：**[**郭文贵先生直播精选**](https://www.youtube.com/channel/UCgvFZMztYVyUVRQgf5rHe0w/videos)**；欢迎关注盖特独家文贵先生大直播精选发布账号：**[**@MilesGuolive1**](https://gettr.com/user/MilesGuolive1)
 
+声明：文中内容根据郭文贵先生直播视频整理，如果文字内容与视频内容冲突则以原视频为准，标题仅为概括，标题与视频内容冲突之处仅代表作者个人观点。
+
+欢迎喜联盟进驻以及各农场兄弟姐妹们坐客串门，请通过以下方式关注及订阅我们——
+
+Discord：[日本银河系农场Discord群](https://discord.com/channels/805765245758472202/851632878567948351)；
+
+YouTube：[日本银河系农场](https://www.youtube.com/channel/UCYfGHsj66eHQFqAt8pYsXHA)、[小七工作室](https://www.youtube.com/channel/UCpJIF2wIaqb4VBqF3-V_7KA/videos)、[刁民热线](https://www.youtube.com/channel/UCybJyCc-WPhvAXHnjoh06SQ) 、[Hello Friend 你好,朋友](https://www.youtube.com/channel/UCTc1E9DAHXliBuHIveYORjQ/featured)、[Galaxy NFSC](https://www.youtube.com/channel/UCuoWQD3AbdCLi4VkSlYjyRQ/videos)、[银河系档案放映馆](https://www.youtube.com/channel/UCJ0FJt00cutaMfhE2kuXd3A) 、[郭文贵先生直播精选](https://www.youtube.com/channel/UCgvFZMztYVyUVRQgf5rHe0w/videos)；
+
+G-News：[喜马拉雅日本银河系农场 G-News](https://gnews.org/zh-hans/author/jgalaxy2021/)、[日本银河系农场-阿尔法星球](https://gnews.org/zh-hans/author/galaxyalphaplanet/) 、[银河勇气之星](https://gnews.org/zh-hans/author/yinyongqi/)、[NewFOC](https://gnews.org/zh-hans/author/newfoc/) ；
+
+盖特：[日本银河系农场@himalayajgalaxy盖特](https://www.gettr.com/user/himalayajgalaxy)；
+
+推特：[日本银河系农场\[email protected\]推特](https://twitter.com/HJapanGalaxyII)；
+
+G-TV：[日本银河系农场](https://gtv.org/user/60c0168b8ce6da73c416c24b#home)。
 
  
 
