--- a/gnews/3.md
+++ b/gnews/3.md
@@ -1,7 +1,7 @@
 ---
-title: 江志成吴征付钱HBO VICE
+title: 法律与行政命令
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1939934/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1939962/)
 
 #### 编辑/整理：澳雅大直播工作组视频剪辑小队
 
