--- a/gnews/16.md
+++ b/gnews/16.md
@@ -1,7 +1,7 @@
 ---
-title: 文贵大直播“精选”
+title: 共产党的核糖核酸游戏
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1941004/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1941064/)
 
 #### 编辑/整理：澳雅大直播工作组视频剪辑小队
 
