--- a/gnews/3.md
+++ b/gnews/3.md
@@ -1,7 +1,7 @@
 ---
-title: 任何药物都不要连续服用
+title: 凡是不拿动物当动物的地方，人也活不好
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1941147/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1941193/)
 
 #### 编辑/整理：澳雅大直播工作组视频剪辑小队
 
