--- a/gnews/30.md
+++ b/gnews/30.md
@@ -1,7 +1,7 @@
 ---
-title: 以歌灭共
+title: 全球农场
 ---
-`MOSREC` [轉載自GNews](https://gnews.org/zh-hans/1945124/)
+`MOSREC` [轉載自GNews](https://gnews.org/zh-hans/1945129/)
 
 发布：奇门遁甲
 
