--- a/gnews/16.md
+++ b/gnews/16.md
@@ -1,7 +1,7 @@
 ---
-title: 清零的经济危害
+title: 上天帮助灭冬奥会
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1945414/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1945454/)
 
 编辑/整理：澳雅大直播工作组视频剪辑小队
 
