--- a/gnews/2.md
+++ b/gnews/2.md
@@ -1,7 +1,7 @@
 ---
-title: 共产党就是傻子表演
+title: 希望有雷神这样的勇士拥有正义和勇敢将妖魔鬼怪(中共)雷击在荒野之中变成垃圾
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1945497/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1945554/)
 
 编辑/整理：澳雅大直播工作组视频剪辑小队
 
