--- a/gnews/3.md
+++ b/gnews/3.md
@@ -1,7 +1,7 @@
 ---
-title: 自杀自残的冬奥会
+title: 共产党编造完美的运动会
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1949804/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1949822/)
 
 #### 编辑/整理：澳雅大直播工作组视频剪辑小队
 
