--- a/gnews/11.md
+++ b/gnews/11.md
@@ -1,7 +1,7 @@
 ---
-title: 冬奥之前，年初一H-Pay上线，对体制内很大震撼
+title: 没有定价规则的贸易下的交易
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1950592/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1950632/)
 
 #### 编辑/整理：澳雅大直播工作组视频剪辑小队
 
