--- a/gnews/12.md
+++ b/gnews/12.md
@@ -1,7 +1,7 @@
 ---
-title: H-Pay提现转账最大最快
+title: 把不可能变成可能，把可能变成绝对可能
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1950584/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1950621/)
 
 #### 编辑/整理：澳雅大直播工作组视频剪辑小队
 
