--- a/gnews/13.md
+++ b/gnews/13.md
@@ -1,7 +1,7 @@
 ---
-title: 如何推广H-pay？!
+title: 和平时期的战争
 ---
-`G-NEWS TAIWAN` [轉載自GNews](https://gnews.org/zh-hans/1954229/)
+`G-NEWS TAIWAN` [轉載自GNews](https://gnews.org/zh-hans/1954340/)
 
 台灣寶島農場
 
