--- a/gnews/5.md
+++ b/gnews/5.md
@@ -1,7 +1,7 @@
 ---
-title: 和平时期的战争
+title: 中共企图对台湾搞大一统的侵略行为是可议的
 ---
-`G-NEWS TAIWAN` [轉載自GNews](https://gnews.org/zh-hans/1954340/)
+`G-NEWS TAIWAN` [轉載自GNews](https://gnews.org/zh-hans/1954446/)
 
 台灣寶島農場
 
