--- a/gnews/1.md
+++ b/gnews/1.md
@@ -1,7 +1,7 @@
 ---
-title: 第三剂疫苗政策的争议
+title: 灭共是新中国联邦不变的目标
 ---
-`G-NEWS TAIWAN` [轉載自GNews](https://gnews.org/zh-hans/1954402/)
+`G-NEWS TAIWAN` [轉載自GNews](https://gnews.org/zh-hans/1954481/)
 
 台灣寶島農場
 
