--- a/gnews/6.md
+++ b/gnews/6.md
@@ -1,7 +1,7 @@
 ---
-title: 七哥给的三个建议
+title: 战友要表现自信
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1959280/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1959310/)
 
 #### 编辑/整理：澳雅大直播工作组视频剪辑小队
 
