--- a/gnews/5.md
+++ b/gnews/5.md
@@ -1,7 +1,7 @@
 ---
-title: 战友要表现自信
+title: 可悲可恨可怜的中国人 没有比今天的中国人更可拍了
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1959310/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1959324/)
 
 #### 编辑/整理：澳雅大直播工作组视频剪辑小队
 
