--- a/gnews/2.md
+++ b/gnews/2.md
@@ -1,7 +1,7 @@
 ---
-title: UBS银行是中国最大犯罪银行
+title: 杨贝贝绝对是rico法案
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1963366/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1963462/)
 
 编辑/整理：澳雅大直播工作组视频剪辑小队
 
