--- a/gnews/10.md
+++ b/gnews/10.md
@@ -1,7 +1,7 @@
 ---
-title: 独裁都认为死人是独裁和国家强大的必然基础
+title: 约翰犯的愚蠢的错误
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1963296/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1963406/)
 
 编辑/整理：澳雅大直播工作组视频剪辑小队
 
