--- a/gnews/1.md
+++ b/gnews/1.md
@@ -1,7 +1,7 @@
 ---
-title: 中美必有一战的时间
+title: 管理好时间的前提就是你真正的解决问题的能力
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1964700/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1964752/)
 
 编辑/整理：澳雅大直播工作组视频剪辑小队
 
