--- a/gnews/14.md
+++ b/gnews/14.md
@@ -1,7 +1,7 @@
 ---
-title: 相信万佛万神的力量
+title: 法国无处不在的各种种族冲突
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1964583/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1964649/)
 
 编辑/整理：澳雅大直播工作组视频剪辑小队
 
