--- a/gnews/18.md
+++ b/gnews/18.md
@@ -1,7 +1,7 @@
 ---
-title: 南普陀之地所有定乾坤的事情会被颠覆
+title: 不要去崇拜舍利子
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1964556/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1964614/)
 
 编辑/整理：澳雅大直播工作组视频剪辑小队
 
