--- a/gnews/3.md
+++ b/gnews/3.md
@@ -1,7 +1,7 @@
 ---
-title: 中共病毒的早期治疗
+title: 疫苗注射对人体免疫系统的危害
 ---
-`G-NEWS TAIWAN` [轉載自GNews](https://gnews.org/zh-hans/1965471/)
+`G-NEWS TAIWAN` [轉載自GNews](https://gnews.org/zh-hans/1965502/)
 
 台灣寶島農場
 
