--- a/gnews/1.md
+++ b/gnews/1.md
@@ -1,7 +1,7 @@
 ---
-title: 疫苗注射对人体免疫系统的危害
+title: H-Pay自己就能搞基金
 ---
-`G-NEWS TAIWAN` [轉載自GNews](https://gnews.org/zh-hans/1965502/)
+`G-NEWS TAIWAN` [轉載自GNews](https://gnews.org/zh-hans/1965521/)
 
 台灣寶島農場
 
