--- a/gnews/5.md
+++ b/gnews/5.md
@@ -1,7 +1,7 @@
 ---
-title: 中共病毒的起源 为何没更多人质疑
+title: 中共病毒的早期治疗
 ---
-`G-NEWS TAIWAN` [轉載自GNews](https://gnews.org/zh-hans/1965445/)
+`G-NEWS TAIWAN` [轉載自GNews](https://gnews.org/zh-hans/1965471/)
 
 台灣寶島農場
 
