--- a/gnews/15.md
+++ b/gnews/15.md
@@ -1,7 +1,7 @@
 ---
-title: H-Pay的核心价值是去中心化、无中介方
+title: 5月后美国经济恐将大崩溃
 ---
-`G-NEWS TAIWAN` [轉載自GNews](https://gnews.org/zh-hans/1965565/)
+`G-NEWS TAIWAN` [轉載自GNews](https://gnews.org/zh-hans/1965657/)
 
 台灣寶島農場
 
